@@ -18,17 +18,96 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * @production GenericClassDecl : {@link ClassDecl} ::= <span class="component">{@link Modifiers}</span> <span class="component">&lt;ID:String&gt;</span> <span class="component">[SuperClassAccess:{@link Access}]</span> <span class="component">Implements:{@link Access}*</span> <span class="component">{@link BodyDecl}*</span> <span class="component">TypeParameter:{@link TypeVariable}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:2
  */
-public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTypeDecl {
-  /**
+public class GenericClassDecl extends ClassDecl implements GenericTypeDecl {
+  private static final Logger logger = LoggerFactory.getLogger(GenericClassDecl.class);
+/**
+   * @apilevel internal
+   */
+  protected boolean rawType_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl rawType_value;
+/**
+   * @apilevel internal
+   */
+  protected java.util.Map lookupParTypeDecl_ArrayList_values;
+/**
+   * @apilevel internal
+   */
+  protected List lookupParTypeDecl_ArrayList_list;
+/**
+   * @apilevel internal
+   */
+  protected int usesTypeVariable_visited = -1;
+/**
+   * @apilevel internal
+   */
+  protected boolean usesTypeVariable_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean usesTypeVariable_initialized = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean usesTypeVariable_value;
+protected java.util.Map subtype_TypeDecl_values;
+protected java.util.Map instanceOf_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean getPlaceholderMethodList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List<PlaceholderMethodDecl> getPlaceholderMethodList_value;
+protected java.util.Map lookupParTypeDecl_ParTypeAccess_values;
+/**
+   * @ast method 
+   * 
+   */
+  public GenericClassDecl() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GenericClassDecl(Modifiers p0, String p1, Opt<Access> p2, List<Access> p3, List<BodyDecl> p4, List<TypeVariable> p5) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+    setChild(p4, 3);
+    setChild(p5, 4);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GenericClassDecl(Modifiers p0, beaver.Symbol p1, Opt<Access> p2, List<Access> p3, List<BodyDecl> p4, List<TypeVariable> p5) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+    setChild(p4, 3);
+    setChild(p5, 4);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     rawType_computed = false;
     rawType_value = null;
@@ -42,16 +121,18 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     getPlaceholderMethodList_value = null;
     lookupParTypeDecl_ParTypeAccess_values = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericClassDecl clone() throws CloneNotSupportedException {
     GenericClassDecl node = (GenericClassDecl)super.clone();
     node.rawType_computed = false;
@@ -69,29 +150,33 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericClassDecl copy() {
     try {
       GenericClassDecl node = (GenericClassDecl) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericClassDecl fullCopy() {
     GenericClassDecl tree = (GenericClassDecl) copy();
     if (children != null) {
@@ -105,22 +190,25 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     }
     return tree;
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsTypeCheck
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:425
    */
-  public void typeCheck() {
+  @Override
+public void typeCheck() {
     super.typeCheck();
-    if(instanceOf(typeThrowable()))
-      error(" generic class " + typeName() + " may not directly or indirectly inherit java.lang.Throwable");
+    if(instanceOf(typeThrowable())) {
+		error(new StringBuilder().append(" generic class ").append(typeName()).append(" may not directly or indirectly inherit java.lang.Throwable").toString());
+	}
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1324
    */
-  public ClassDecl substitutedClassDecl(Parameterization parTypeDecl) {
+  @Override
+public ClassDecl substitutedClassDecl(Parameterization parTypeDecl) {
     GenericClassDecl c = new GenericClassDeclSubstituted(
       (Modifiers)getModifiers().fullCopy(),
       getID(),
@@ -132,7 +220,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     );
     return c;
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsPrettyPrint
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsPrettyPrint.jrag:61
@@ -148,12 +236,13 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
       }
       s.append('>');
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsPrettyPrint
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsPrettyPrint.jrag:73
    */
-  public void toString(StringBuffer s) {
+  @Override
+public void toString(StringBuffer s) {
 		getModifiers().toString(s);
 		s.append("class " + getID());
 		ppTypeParameters(s);
@@ -194,34 +283,38 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     */
     
 	}
-  /**
+/**
    * @ast method 
    * @aspect Generics
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:235
    */
-  public TypeDecl makeGeneric(Signatures.ClassSignature s) {
+  @Override
+public TypeDecl makeGeneric(Signatures.ClassSignature s) {
     return (TypeDecl)this;
   }
-  /**
+/**
    * @ast method 
    * @aspect GenericsNameBinding
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:489
    */
-  public SimpleSet addTypeVariables(SimpleSet c, String name) {
+  @Override
+public SimpleSet addTypeVariables(SimpleSet c, String name) {
     GenericTypeDecl original = (GenericTypeDecl)original();
     for(int i = 0; i < original.getNumTypeParameter(); i++) {
       TypeVariable p = original.getTypeParameter(i);
-      if(p.name().equals(name))
-        c = c.add(p);
+      if(p.name().equals(name)) {
+		c = c.add(p);
+	}
     }
     return c;
   }
-  /**
+/**
    * @ast method 
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:799
    */
-  public List createArgumentList(ArrayList params) {
+  @Override
+public List createArgumentList(ArrayList params) {
     GenericTypeDecl original = (GenericTypeDecl)original();
     List list = new List();
     if(params.isEmpty()) {
@@ -229,23 +322,17 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
       // Concern: The previous version seem to add the erasure of the type variable for some reason,  
       // maybe this is how the raw type is represented (?), but this doesn't really comply with the 
       // claim that raw types don't have any type variables...?
-      for(int i = 0; i < original.getNumTypeParameter(); i++)
-        list.add(original.getTypeParameter(i).erasure().createBoundAccess());
-    } else
-      for(Iterator iter = params.iterator(); iter.hasNext(); )
-        list.add(((TypeDecl)iter.next()).createBoundAccess());
+      for(int i = 0; i < original.getNumTypeParameter(); i++) {
+		list.add(original.getTypeParameter(i).erasure().createBoundAccess());
+	}
+    } else {
+		for(Iterator iter = params.iterator(); iter.hasNext(); ) {
+			list.add(((TypeDecl)iter.next()).createBoundAccess());
+		}
+	}
     return list;
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericClassDecl() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -253,74 +340,55 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[5];
     setChild(new Opt(), 1);
     setChild(new List(), 2);
     setChild(new List(), 3);
     setChild(new List(), 4);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericClassDecl(Modifiers p0, String p1, Opt<Access> p2, List<Access> p3, List<BodyDecl> p4, List<TypeVariable> p5) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-    setChild(p4, 3);
-    setChild(p5, 4);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericClassDecl(Modifiers p0, beaver.Symbol p1, Opt<Access> p2, List<Access> p3, List<BodyDecl> p4, List<TypeVariable> p5) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-    setChild(p4, 3);
-    setChild(p5, 4);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 5;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -328,93 +396,103 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the optional node for the SuperClassAccess child. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * @param opt The new node to be used as the optional node for the SuperClassAccess child.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccessOpt(Opt<Access> opt) {
+  @Override
+public void setSuperClassAccessOpt(Opt<Access> opt) {
     setChild(opt, 1);
   }
-  /**
+/**
    * Check whether the optional SuperClassAccess child exists.
    * @return {@code true} if the optional SuperClassAccess child exists, {@code false} if it does not.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public boolean hasSuperClassAccess() {
+  @Override
+public boolean hasSuperClassAccess() {
     return getSuperClassAccessOpt().getNumChild() != 0;
   }
-  /**
+/**
    * Retrieves the (optional) SuperClassAccess child.
    * @return The SuperClassAccess child, if it exists. Returns {@code null} otherwise.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getSuperClassAccess() {
     return (Access)getSuperClassAccessOpt().getChild(0);
   }
-  /**
+/**
    * Replaces the (optional) SuperClassAccess child.
    * @param node The new node to be used as the SuperClassAccess child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccess(Access node) {
+  @Override
+public void setSuperClassAccess(Access node) {
     getSuperClassAccessOpt().setChild(node, 0);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt<Access> getSuperClassAccessOpt() {
     return (Opt<Access>)getChild(1);
   }
-  /**
+/**
    * Retrieves the optional node for child SuperClassAccess. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The optional node for child SuperClassAccess.
@@ -422,31 +500,34 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt<Access> getSuperClassAccessOptNoTransform() {
     return (Opt<Access>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the Implements list.
    * @param list The new list node to be used as the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setImplementsList(List<Access> list) {
+  @Override
+public void setImplementsList(List<Access> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * @return Number of children in the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumImplements() {
+  @Override
+public int getNumImplements() {
     return getImplementsList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the Implements list.
@@ -454,10 +535,11 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public int getNumImplementsNoTransform() {
+  @Override
+public int getNumImplementsNoTransform() {
     return getImplementsListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the Implements list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the Implements list.
@@ -465,31 +547,34 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getImplements(int i) {
     return (Access)getImplementsList().getChild(i);
   }
-  /**
+/**
    * Append an element to the Implements list.
    * @param node The element to append to the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addImplements(Access node) {
+  @Override
+public void addImplements(Access node) {
     List<Access> list = (parent == null || state == null) ? getImplementsListNoTransform() : getImplementsList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addImplementsNoTransform(Access node) {
+  @Override
+public void addImplementsNoTransform(Access node) {
     List<Access> list = getImplementsListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the Implements list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -497,21 +582,23 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public void setImplements(Access node, int i) {
+  @Override
+public void setImplements(Access node, int i) {
     List<Access> list = getImplementsList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the Implements list.
    * @return The node representing the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getImplementss() {
+  @Override
+public List<Access> getImplementss() {
     return getImplementsList();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -519,23 +606,25 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public List<Access> getImplementssNoTransform() {
+  @Override
+public List<Access> getImplementssNoTransform() {
     return getImplementsListNoTransform();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * @return The node representing the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getImplementsList() {
     List<Access> list = (List<Access>)getChild(2);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -543,31 +632,34 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getImplementsListNoTransform() {
     return (List<Access>)getChildNoTransform(2);
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 3);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -575,10 +667,11 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -586,31 +679,34 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -618,21 +714,23 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -640,23 +738,25 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<BodyDecl> getBodyDeclList() {
     List<BodyDecl> list = (List<BodyDecl>)getChild(3);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -664,11 +764,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(3);
   }
-  /**
+/**
    * Replaces the TypeParameter list.
    * @param list The new list node to be used as the TypeParameter list.
    * @apilevel high-level
@@ -678,17 +779,18 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   public void setTypeParameterList(List<TypeVariable> list) {
     setChild(list, 4);
   }
-  /**
+/**
    * Retrieves the number of children in the TypeParameter list.
    * @return Number of children in the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumTypeParameter() {
+  @Override
+public int getNumTypeParameter() {
     return getTypeParameterList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the TypeParameter list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the TypeParameter list.
@@ -699,7 +801,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   public int getNumTypeParameterNoTransform() {
     return getTypeParameterListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the TypeParameter list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the TypeParameter list.
@@ -707,11 +809,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeVariable getTypeParameter(int i) {
     return (TypeVariable)getTypeParameterList().getChild(i);
   }
-  /**
+/**
    * Append an element to the TypeParameter list.
    * @param node The element to append to the TypeParameter list.
    * @apilevel high-level
@@ -722,7 +825,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     List<TypeVariable> list = (parent == null || state == null) ? getTypeParameterListNoTransform() : getTypeParameterList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
@@ -731,7 +834,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     List<TypeVariable> list = getTypeParameterListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the TypeParameter list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -743,7 +846,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     List<TypeVariable> list = getTypeParameterList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * @return The node representing the TypeParameter list.
    * @apilevel high-level
@@ -753,7 +856,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   public List<TypeVariable> getTypeParameters() {
     return getTypeParameterList();
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeParameter list.
@@ -764,20 +867,21 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   public List<TypeVariable> getTypeParametersNoTransform() {
     return getTypeParameterListNoTransform();
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * @return The node representing the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<TypeVariable> getTypeParameterList() {
     List<TypeVariable> list = (List<TypeVariable>)getChild(4);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeParameter list.
@@ -789,20 +893,13 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   public List<TypeVariable> getTypeParameterListNoTransform() {
     return (List<TypeVariable>)getChildNoTransform(4);
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean rawType_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl rawType_value;
-  /**
+/**
    * @attribute syn
    * @aspect Generics
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:176
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl rawType() {
     if(rawType_computed) {
       return rawType_value;
@@ -811,30 +908,27 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     rawType_value = rawType_compute();
-      if(isFinal && num == state().boundariesCrossed) rawType_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		rawType_computed = true;
+	}
     return rawType_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl rawType_compute() {  return lookupParTypeDecl(new ArrayList());  }
-  /**
-   * @apilevel internal
-   */
-  protected java.util.Map lookupParTypeDecl_ArrayList_values;
-  /**
-   * @apilevel internal
-   */
-  protected List lookupParTypeDecl_ArrayList_list;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:715
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl lookupParTypeDecl(ArrayList list) {
     Object _parameters = list;
-    if(lookupParTypeDecl_ArrayList_values == null) lookupParTypeDecl_ArrayList_values = new java.util.HashMap(4);
+    if(lookupParTypeDecl_ArrayList_values == null) {
+		lookupParTypeDecl_ArrayList_values = new java.util.HashMap(4);
+	}
     if(lookupParTypeDecl_ArrayList_values.containsKey(_parameters)) {
       return (TypeDecl)lookupParTypeDecl_ArrayList_values.get(_parameters);
     }
@@ -851,10 +945,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     if(lookupParTypeDecl_ArrayList_value != null) {
       lookupParTypeDecl_ArrayList_value.is$Final = true;
     }
-      if(true) lookupParTypeDecl_ArrayList_values.put(_parameters, lookupParTypeDecl_ArrayList_value);
+      if(true) {
+		lookupParTypeDecl_ArrayList_values.put(_parameters, lookupParTypeDecl_ArrayList_value);
+	}
     return lookupParTypeDecl_ArrayList_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl lookupParTypeDecl_compute(ArrayList list) {
@@ -871,33 +967,19 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     typeDecl.setModifiers((Modifiers)getModifiers().fullCopy());
     typeDecl.setID(getID());
     // ES: trying to only so this for ParClassDecl and then later for RawClassDecl 
-    if (!(typeDecl instanceof RawClassDecl)) 
-      typeDecl.setArgumentList(createArgumentList(list));
+    if (!(typeDecl instanceof RawClassDecl)) {
+		typeDecl.setArgumentList(createArgumentList(list));
+	}
     return typeDecl;
     
   }
-  /**
-   * @apilevel internal
-   */
-  protected int usesTypeVariable_visited = -1;
-  /**
-   * @apilevel internal
-   */
-  protected boolean usesTypeVariable_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean usesTypeVariable_initialized = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean usesTypeVariable_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1077
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean usesTypeVariable() {
     if(usesTypeVariable_computed) {
       return usesTypeVariable_value;
@@ -915,8 +997,9 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
         usesTypeVariable_visited = state.CIRCLE_INDEX;
         state.CHANGE = false;
         boolean new_usesTypeVariable_value = usesTypeVariable_compute();
-        if (new_usesTypeVariable_value!=usesTypeVariable_value)
-          state.CHANGE = true;
+        if (new_usesTypeVariable_value!=usesTypeVariable_value) {
+			state.CHANGE = true;
+		}
         usesTypeVariable_value = new_usesTypeVariable_value; 
         state.CIRCLE_INDEX++;
       } while (state.CHANGE);
@@ -933,44 +1016,47 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
       state.IN_CIRCLE = false; 
       return usesTypeVariable_value;
     }
-    if(usesTypeVariable_visited != state.CIRCLE_INDEX) {
-      usesTypeVariable_visited = state.CIRCLE_INDEX;
-      if (state.RESET_CYCLE) {
+    if (usesTypeVariable_visited == state.CIRCLE_INDEX) {
+		return usesTypeVariable_value;
+	}
+	usesTypeVariable_visited = state.CIRCLE_INDEX;
+	if (state.RESET_CYCLE) {
         usesTypeVariable_computed = false;
         usesTypeVariable_initialized = false;
         usesTypeVariable_visited = -1;
         return usesTypeVariable_value;
       }
-      boolean new_usesTypeVariable_value = usesTypeVariable_compute();
-      if (new_usesTypeVariable_value!=usesTypeVariable_value)
-        state.CHANGE = true;
-      usesTypeVariable_value = new_usesTypeVariable_value; 
-      return usesTypeVariable_value;
-    }
-    return usesTypeVariable_value;
+	boolean new_usesTypeVariable_value = usesTypeVariable_compute();
+	if (new_usesTypeVariable_value!=usesTypeVariable_value) {
+		state.CHANGE = true;
+	}
+	usesTypeVariable_value = new_usesTypeVariable_value;
+	return usesTypeVariable_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean usesTypeVariable_compute() {  return true;  }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:13
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -984,7 +1070,7 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -1005,56 +1091,60 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeGenericClassDecl(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:125
    */
-  public boolean supertypeParClassDecl(ParClassDecl type) {
+  @Override
+public boolean supertypeParClassDecl(ParClassDecl type) {
     ASTNode$State state = state();
     try {  return type.genericDecl().original().subtype(this);  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:129
    */
-  public boolean supertypeParInterfaceDecl(ParInterfaceDecl type) {
+  @Override
+public boolean supertypeParInterfaceDecl(ParInterfaceDecl type) {
     ASTNode$State state = state();
     try {  return type.genericDecl().original().subtype(this);  }
     finally {
     }
   }
-  protected java.util.Map instanceOf_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:394
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean instanceOf(TypeDecl type) {
     Object _parameters = type;
-    if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
+    if(instanceOf_TypeDecl_values == null) {
+		instanceOf_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -1062,22 +1152,16 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
-      if(isFinal && num == state().boundariesCrossed) instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+	}
     return instanceOf_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean instanceOf_compute(TypeDecl type) {  return subtype(type);  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getPlaceholderMethodList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List<PlaceholderMethodDecl> getPlaceholderMethodList_value;
-  /**
+/**
  	 * The placeholder method list for the constructors of this generic
  	 * class.
  	 *
@@ -1097,18 +1181,20 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     getPlaceholderMethodList_value = getPlaceholderMethodList_compute();
     getPlaceholderMethodList_value.setParent(this);
     getPlaceholderMethodList_value.is$Final = true;
-      if(true) getPlaceholderMethodList_computed = true;
+      if(true) {
+		getPlaceholderMethodList_computed = true;
+	}
     return getPlaceholderMethodList_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private List<PlaceholderMethodDecl> getPlaceholderMethodList_compute() {
 		List<PlaceholderMethodDecl> placeholderMethods =
-			new List<PlaceholderMethodDecl>();
+			new List<>();
 		List<TypeVariable> typeParams = getTypeParameterList();
-		List<TypeVariable> classTypeVars = new List<TypeVariable>();
-		List<Access> typeArgs = new List<Access>();
+		List<TypeVariable> classTypeVars = new List<>();
+		List<Access> typeArgs = new List<>();
 
 		// copy the list of type parameters
 		int arg = 0;
@@ -1117,9 +1203,10 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
 			typeArgs.add(new TypeAccess(substName));
 
 			TypeVariable typeVar = (TypeVariable) iter.next();
-			List<Access> typeBounds = new List<Access>();
-			for (Access typeBound : typeVar.getTypeBoundList())
+			List<Access> typeBounds = new List<>();
+			for (Access typeBound : typeVar.getTypeBoundList()) {
 				typeBounds.add((Access) typeBound.cloneSubtree());
+			}
 			classTypeVars.add(
 					new TypeVariable(
 						new Modifiers(),
@@ -1134,33 +1221,38 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
 
 		for (Iterator iter = constructors().iterator(); iter.hasNext(); ) {
 			ConstructorDecl decl = (ConstructorDecl)iter.next();
-			if (decl instanceof ConstructorDeclSubstituted)
+			if (decl instanceof ConstructorDeclSubstituted) {
 				decl = ((ConstructorDeclSubstituted) decl).getOriginal();
+			}
 
 			// filter accessible constructors
-			if (!decl.accessibleFrom(hostType()))
+			if (!decl.accessibleFrom(hostType())) {
 				continue;
+			}
 
 			Collection<TypeVariable> originalTypeVars =
-				new LinkedList<TypeVariable>();
-			List<TypeVariable> typeVars = new List<TypeVariable>();
-			for (TypeVariable typeVar : typeParams)
+				new LinkedList<>();
+			List<TypeVariable> typeVars = new List<>();
+			for (TypeVariable typeVar : typeParams) {
 				originalTypeVars.add(typeVar);
-			for (TypeVariable typeVar : classTypeVars)
+			}
+			for (TypeVariable typeVar : classTypeVars) {
 				typeVars.add((TypeVariable) typeVar.cloneSubtree());
+			}
 
 			if (decl instanceof GenericConstructorDecl) {
 				GenericConstructorDecl genericDecl =
 					(GenericConstructorDecl) decl;
-				List<TypeVariable> typeVariables = new List<TypeVariable>();
+				List<TypeVariable> typeVariables = new List<>();
 				for (int i = 0; i < genericDecl.getNumTypeParameter(); ++i) {
 					String substName = "#" + (arg+i);
 
 					TypeVariable typeVar = genericDecl.getTypeParameter(i);
 					originalTypeVars.add(typeVar);
-					List<Access> typeBounds = new List<Access>();
-					for (Access typeBound : typeVar.getTypeBoundList())
+					List<Access> typeBounds = new List<>();
+					for (Access typeBound : typeVar.getTypeBoundList()) {
 						typeBounds.add((Access) typeBound.cloneSubtree());
+					}
 					typeVars.add(
 							new TypeVariable(
 								new Modifiers(),
@@ -1171,13 +1263,13 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
 			}
 
 			List<ParameterDeclaration> substParameters =
-				new List<ParameterDeclaration>();
+				new List<>();
 			for (ParameterDeclaration param : decl.getParameterList()) {
 				substParameters.add(param.substituted(
 							originalTypeVars, typeVars));
 			}
 
-			List<Access> substExceptions = new List<Access>();
+			List<Access> substExceptions = new List<>();
 			for (Access exception : decl.getExceptionList()) {
 				substExceptions.add(exception.substituted(
 							originalTypeVars, typeVars));
@@ -1197,27 +1289,30 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
 		}
 		return placeholderMethods;
 	}
-  /**
+/**
    * @attribute syn
    * @aspect Generics
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:158
    */
-  public boolean isGenericType() {
+  @Override
+public boolean isGenericType() {
     ASTNode$State state = state();
     try {  return true;  }
     finally {
     }
   }
-  protected java.util.Map lookupParTypeDecl_ParTypeAccess_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:708
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl lookupParTypeDecl(ParTypeAccess p) {
     Object _parameters = p;
-    if(lookupParTypeDecl_ParTypeAccess_values == null) lookupParTypeDecl_ParTypeAccess_values = new java.util.HashMap(4);
+    if(lookupParTypeDecl_ParTypeAccess_values == null) {
+		lookupParTypeDecl_ParTypeAccess_values = new java.util.HashMap(4);
+	}
     if(lookupParTypeDecl_ParTypeAccess_values.containsKey(_parameters)) {
       return (TypeDecl)lookupParTypeDecl_ParTypeAccess_values.get(_parameters);
     }
@@ -1225,19 +1320,22 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     TypeDecl lookupParTypeDecl_ParTypeAccess_value = lookupParTypeDecl_compute(p);
-      if(isFinal && num == state().boundariesCrossed) lookupParTypeDecl_ParTypeAccess_values.put(_parameters, lookupParTypeDecl_ParTypeAccess_value);
+      if(isFinal && num == state().boundariesCrossed) {
+		lookupParTypeDecl_ParTypeAccess_values.put(_parameters, lookupParTypeDecl_ParTypeAccess_value);
+	}
     return lookupParTypeDecl_ParTypeAccess_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl lookupParTypeDecl_compute(ParTypeAccess p) {
     ArrayList typeArguments = new ArrayList();
-    for(int i = 0; i < p.getNumTypeArgument(); i++)
-      typeArguments.add(p.getTypeArgument(i).type());
+    for(int i = 0; i < p.getNumTypeArgument(); i++) {
+		typeArguments.add(p.getTypeArgument(i).type());
+	}
     return lookupParTypeDecl(typeArguments);
   }
-  /**
+/**
    * @attribute inh
    * @aspect GenericsTypeCheck
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:435
@@ -1248,11 +1346,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     TypeDecl typeThrowable_value = getParent().Define_TypeDecl_typeThrowable(this, null);
     return typeThrowable_value;
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:481
    * @apilevel internal
    */
-  public boolean Define_boolean_isNestedType(ASTNode caller, ASTNode child) {
+  @Override
+public boolean Define_boolean_isNestedType(ASTNode caller, ASTNode child) {
     if(caller == getTypeParameterListNoTransform())  {
     int childIndex = caller.getIndexOfChild(child);
     return true;
@@ -1260,11 +1359,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     else {      return super.Define_boolean_isNestedType(caller, child);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:482
    * @apilevel internal
    */
-  public TypeDecl Define_TypeDecl_enclosingType(ASTNode caller, ASTNode child) {
+  @Override
+public TypeDecl Define_TypeDecl_enclosingType(ASTNode caller, ASTNode child) {
     if(caller == getTypeParameterListNoTransform())  {
     int childIndex = caller.getIndexOfChild(child);
     return this;
@@ -1272,19 +1372,22 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     else {      return super.Define_TypeDecl_enclosingType(caller, child);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:531
    * @apilevel internal
    */
-  public SimpleSet Define_SimpleSet_lookupType(ASTNode caller, ASTNode child, String name) {
+  @Override
+public SimpleSet Define_SimpleSet_lookupType(ASTNode caller, ASTNode child, String name) {
     if(caller == getBodyDeclListNoTransform())  { 
     int index = caller.getIndexOfChild(child);
     {
     SimpleSet c = memberTypes(name);
-    if(getBodyDecl(index).visibleTypeParameters())
-      c = addTypeVariables(c, name);
-    if(!c.isEmpty())
-      return c;
+    if(getBodyDecl(index).visibleTypeParameters()) {
+		c = addTypeVariables(c, name);
+	}
+    if(!c.isEmpty()) {
+		return c;
+	}
     // 8.5.2
     if(isClassDecl() && isStatic() && !isTopLevelType()) {
       for(Iterator iter = lookupType(name).iterator(); iter.hasNext(); ) {
@@ -1293,11 +1396,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
           c = c.add(d);
         }
       }
-    }
-    else
-      c = lookupType(name);
-    if(!c.isEmpty())
-      return c;
+    } else {
+		c = lookupType(name);
+	}
+    if(!c.isEmpty()) {
+		return c;
+	}
     return topLevelType().lookupType(name); // Fix to search imports
     // include type parameters if not static
   }
@@ -1307,7 +1411,9 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     {
     SimpleSet c = memberTypes(name);
     c = addTypeVariables(c, name);
-    if(!c.isEmpty()) return c;
+    if(!c.isEmpty()) {
+		return c;
+	}
     // 8.5.2
     if(isClassDecl() && isStatic() && !isTopLevelType()) {
       for(Iterator iter = lookupType(name).iterator(); iter.hasNext(); ) {
@@ -1316,11 +1422,12 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
           c = c.add(d);
         }
       }
-    }
-    else
-      c = lookupType(name);
-    if(!c.isEmpty())
-      return c;
+    } else {
+		c = lookupType(name);
+	}
+    if(!c.isEmpty()) {
+		return c;
+	}
     return topLevelType().lookupType(name); // Fix to search imports
   }
   }
@@ -1338,20 +1445,22 @@ public class GenericClassDecl extends ClassDecl implements Cloneable, GenericTyp
     else {      return super.Define_SimpleSet_lookupType(caller, child, name);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsParTypeDecl.jrag:50
    * @apilevel internal
    */
-  public TypeDecl Define_TypeDecl_genericDecl(ASTNode caller, ASTNode child) {
+  @Override
+public TypeDecl Define_TypeDecl_genericDecl(ASTNode caller, ASTNode child) {
      {
       int childIndex = this.getIndexOfChild(caller);
       return this;
     }
   }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
