@@ -18,16 +18,98 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production GenericClassDeclSubstituted : {@link GenericClassDecl} ::= <span class="component">&lt;Original:TypeDecl&gt;</span> <span class="component">{@link BodyDecl}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:43
  */
-public class GenericClassDeclSubstituted extends GenericClassDecl implements Cloneable, MemberSubstitutor {
+public class GenericClassDeclSubstituted extends GenericClassDecl implements MemberSubstitutor {
+  private static final Logger logger = LoggerFactory.getLogger(GenericClassDeclSubstituted.class);
+/**
+   * @apilevel internal
+   * @ast method 
+   * 
+   */
+  
   /**
+   * @apilevel internal
+   */
+  protected TypeDecl tokenTypeDecl_Original;
+/**
+   * @apilevel internal
+   */
+  protected boolean getBodyDeclList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List getBodyDeclList_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean sourceTypeDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl sourceTypeDecl_value;
+protected java.util.Map instanceOf_TypeDecl_values;
+protected java.util.Map subtype_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean localMethodsSignatureMap_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected HashMap localMethodsSignatureMap_value;
+protected java.util.Map localFields_String_values;
+protected java.util.Map localTypeDecls_String_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean constructors_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection constructors_value;
+/**
+   * @ast method 
+   * 
+   */
+  public GenericClassDeclSubstituted() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GenericClassDeclSubstituted(Modifiers p0, String p1, Opt<Access> p2, List<Access> p3, List<TypeVariable> p4, TypeDecl p5) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+    setChild(p4, 3);
+    setOriginal(p5);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GenericClassDeclSubstituted(Modifiers p0, beaver.Symbol p1, Opt<Access> p2, List<Access> p3, List<TypeVariable> p4, TypeDecl p5) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+    setChild(p4, 3);
+    setOriginal(p5);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     getBodyDeclList_computed = false;
     getBodyDeclList_value = null;
@@ -42,16 +124,18 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     constructors_computed = false;
     constructors_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericClassDeclSubstituted clone() throws CloneNotSupportedException {
     GenericClassDeclSubstituted node = (GenericClassDeclSubstituted)super.clone();
     node.getBodyDeclList_computed = false;
@@ -70,29 +154,33 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericClassDeclSubstituted copy() {
     try {
       GenericClassDeclSubstituted node = (GenericClassDeclSubstituted) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericClassDeclSubstituted fullCopy() {
     GenericClassDeclSubstituted tree = (GenericClassDeclSubstituted) copy();
     if (children != null) {
@@ -111,16 +199,7 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     }
     return tree;
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericClassDeclSubstituted() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -128,74 +207,55 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[5];
     setChild(new Opt(), 1);
     setChild(new List(), 2);
     setChild(new List(), 3);
     setChild(new List(), 4);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericClassDeclSubstituted(Modifiers p0, String p1, Opt<Access> p2, List<Access> p3, List<TypeVariable> p4, TypeDecl p5) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-    setChild(p4, 3);
-    setOriginal(p5);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericClassDeclSubstituted(Modifiers p0, beaver.Symbol p1, Opt<Access> p2, List<Access> p3, List<TypeVariable> p4, TypeDecl p5) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-    setChild(p4, 3);
-    setOriginal(p5);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 4;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -203,93 +263,103 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the optional node for the SuperClassAccess child. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * @param opt The new node to be used as the optional node for the SuperClassAccess child.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccessOpt(Opt<Access> opt) {
+  @Override
+public void setSuperClassAccessOpt(Opt<Access> opt) {
     setChild(opt, 1);
   }
-  /**
+/**
    * Check whether the optional SuperClassAccess child exists.
    * @return {@code true} if the optional SuperClassAccess child exists, {@code false} if it does not.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public boolean hasSuperClassAccess() {
+  @Override
+public boolean hasSuperClassAccess() {
     return getSuperClassAccessOpt().getNumChild() != 0;
   }
-  /**
+/**
    * Retrieves the (optional) SuperClassAccess child.
    * @return The SuperClassAccess child, if it exists. Returns {@code null} otherwise.
    * @apilevel low-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getSuperClassAccess() {
     return (Access)getSuperClassAccessOpt().getChild(0);
   }
-  /**
+/**
    * Replaces the (optional) SuperClassAccess child.
    * @param node The new node to be used as the SuperClassAccess child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setSuperClassAccess(Access node) {
+  @Override
+public void setSuperClassAccess(Access node) {
     getSuperClassAccessOpt().setChild(node, 0);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt<Access> getSuperClassAccessOpt() {
     return (Opt<Access>)getChild(1);
   }
-  /**
+/**
    * Retrieves the optional node for child SuperClassAccess. This is the {@code Opt} node containing the child SuperClassAccess, not the actual child!
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The optional node for child SuperClassAccess.
@@ -297,31 +367,34 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Opt<Access> getSuperClassAccessOptNoTransform() {
     return (Opt<Access>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the Implements list.
    * @param list The new list node to be used as the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setImplementsList(List<Access> list) {
+  @Override
+public void setImplementsList(List<Access> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * @return Number of children in the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumImplements() {
+  @Override
+public int getNumImplements() {
     return getImplementsList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the Implements list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the Implements list.
@@ -329,10 +402,11 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public int getNumImplementsNoTransform() {
+  @Override
+public int getNumImplementsNoTransform() {
     return getImplementsListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the Implements list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the Implements list.
@@ -340,31 +414,34 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getImplements(int i) {
     return (Access)getImplementsList().getChild(i);
   }
-  /**
+/**
    * Append an element to the Implements list.
    * @param node The element to append to the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addImplements(Access node) {
+  @Override
+public void addImplements(Access node) {
     List<Access> list = (parent == null || state == null) ? getImplementsListNoTransform() : getImplementsList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addImplementsNoTransform(Access node) {
+  @Override
+public void addImplementsNoTransform(Access node) {
     List<Access> list = getImplementsListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the Implements list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -372,21 +449,23 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public void setImplements(Access node, int i) {
+  @Override
+public void setImplements(Access node, int i) {
     List<Access> list = getImplementsList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the Implements list.
    * @return The node representing the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getImplementss() {
+  @Override
+public List<Access> getImplementss() {
     return getImplementsList();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -394,23 +473,25 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public List<Access> getImplementssNoTransform() {
+  @Override
+public List<Access> getImplementssNoTransform() {
     return getImplementsListNoTransform();
   }
-  /**
+/**
    * Retrieves the Implements list.
    * @return The node representing the Implements list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getImplementsList() {
     List<Access> list = (List<Access>)getChild(2);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the Implements list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the Implements list.
@@ -418,31 +499,34 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getImplementsListNoTransform() {
     return (List<Access>)getChildNoTransform(2);
   }
-  /**
+/**
    * Replaces the TypeParameter list.
    * @param list The new list node to be used as the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setTypeParameterList(List<TypeVariable> list) {
+  @Override
+public void setTypeParameterList(List<TypeVariable> list) {
     setChild(list, 3);
   }
-  /**
+/**
    * Retrieves the number of children in the TypeParameter list.
    * @return Number of children in the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumTypeParameter() {
+  @Override
+public int getNumTypeParameter() {
     return getTypeParameterList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the TypeParameter list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the TypeParameter list.
@@ -450,10 +534,11 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public int getNumTypeParameterNoTransform() {
+  @Override
+public int getNumTypeParameterNoTransform() {
     return getTypeParameterListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the TypeParameter list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the TypeParameter list.
@@ -461,31 +546,34 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeVariable getTypeParameter(int i) {
     return (TypeVariable)getTypeParameterList().getChild(i);
   }
-  /**
+/**
    * Append an element to the TypeParameter list.
    * @param node The element to append to the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addTypeParameter(TypeVariable node) {
+  @Override
+public void addTypeParameter(TypeVariable node) {
     List<TypeVariable> list = (parent == null || state == null) ? getTypeParameterListNoTransform() : getTypeParameterList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addTypeParameterNoTransform(TypeVariable node) {
+  @Override
+public void addTypeParameterNoTransform(TypeVariable node) {
     List<TypeVariable> list = getTypeParameterListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the TypeParameter list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -493,21 +581,23 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public void setTypeParameter(TypeVariable node, int i) {
+  @Override
+public void setTypeParameter(TypeVariable node, int i) {
     List<TypeVariable> list = getTypeParameterList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * @return The node representing the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<TypeVariable> getTypeParameters() {
+  @Override
+public List<TypeVariable> getTypeParameters() {
     return getTypeParameterList();
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeParameter list.
@@ -515,23 +605,25 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public List<TypeVariable> getTypeParametersNoTransform() {
+  @Override
+public List<TypeVariable> getTypeParametersNoTransform() {
     return getTypeParameterListNoTransform();
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * @return The node representing the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<TypeVariable> getTypeParameterList() {
     List<TypeVariable> list = (List<TypeVariable>)getChild(3);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeParameter list.
@@ -539,11 +631,12 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<TypeVariable> getTypeParameterListNoTransform() {
     return (List<TypeVariable>)getChildNoTransform(3);
   }
-  /**
+/**
    * Replaces the lexeme Original.
    * @param value The new value for the lexeme Original.
    * @apilevel high-level
@@ -553,17 +646,7 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   public void setOriginal(TypeDecl value) {
     tokenTypeDecl_Original = value;
   }
-  /**
-   * @apilevel internal
-   * @ast method 
-   * 
-   */
-  
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl tokenTypeDecl_Original;
-  /**
+/**
    * Retrieves the value for the lexeme Original.
    * @return The value for the lexeme Original.
    * @apilevel high-level
@@ -573,27 +656,29 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   public TypeDecl getOriginal() {
     return tokenTypeDecl_Original;
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 4);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -601,10 +686,11 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -612,31 +698,34 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -644,21 +733,23 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -666,10 +757,11 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -677,10 +769,11 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclListNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(4);
   }
-  /**
+/**
    * Retrieves the child position of the BodyDecl list.
    * @return The the child position of the BodyDecl list.
    * @apilevel low-level
@@ -690,31 +783,25 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   protected int getBodyDeclListChildPosition() {
     return 4;
   }
-  /**
+/**
    * @attribute syn
    * @aspect NestedTypes
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/TypeAnalysis.jrag:569
    */
-  public TypeDecl hostType() {
+  @Override
+public TypeDecl hostType() {
     ASTNode$State state = state();
     try {  return getOriginal();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getBodyDeclList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List getBodyDeclList_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1052
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List getBodyDeclList() {
     if(getBodyDeclList_computed) {
       return (List) getChild(getBodyDeclListChildPosition());
@@ -724,38 +811,34 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   boolean isFinal = this.is$Final();
     getBodyDeclList_value = getBodyDeclList_compute();
     setBodyDeclList(getBodyDeclList_value);
-      if(isFinal && num == state().boundariesCrossed) getBodyDeclList_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getBodyDeclList_computed = true;
+	}
     return (List) getChild(getBodyDeclListChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private List getBodyDeclList_compute() {  return new BodyDeclList();  }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1306
    */
-  public TypeDecl original() {
+  @Override
+public TypeDecl original() {
     ASTNode$State state = state();
     try {  return getOriginal().original();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean sourceTypeDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl sourceTypeDecl_value;
-  /**
+/**
    * @attribute syn
    * @aspect SourceDeclarations
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1508
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl sourceTypeDecl() {
     if(sourceTypeDecl_computed) {
       return sourceTypeDecl_value;
@@ -764,23 +847,27 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     sourceTypeDecl_value = sourceTypeDecl_compute();
-      if(isFinal && num == state().boundariesCrossed) sourceTypeDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		sourceTypeDecl_computed = true;
+	}
     return sourceTypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl sourceTypeDecl_compute() {  return original().sourceTypeDecl();  }
-  protected java.util.Map instanceOf_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:488
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean instanceOf(TypeDecl type) {
     Object _parameters = type;
-    if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
+    if(instanceOf_TypeDecl_values == null) {
+		instanceOf_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -788,31 +875,35 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
-      if(isFinal && num == state().boundariesCrossed) instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+	}
     return instanceOf_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean instanceOf_compute(TypeDecl type) {  return subtype(type);  }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:511
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -826,7 +917,7 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -847,60 +938,55 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeGenericClassDeclSubstituted(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:513
    */
-  public boolean supertypeGenericClassDeclSubstituted(GenericClassDeclSubstituted type) {
+  @Override
+public boolean supertypeGenericClassDeclSubstituted(GenericClassDeclSubstituted type) {
     ASTNode$State state = state();
     try {  return original() == type.original() && type.enclosingType().subtype(enclosingType()) || super.supertypeGenericClassDeclSubstituted(type);  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:14
    */
-  public boolean supertypeGenericClassDecl(GenericClassDecl type) {
+  @Override
+public boolean supertypeGenericClassDecl(GenericClassDecl type) {
     ASTNode$State state = state();
     try {  return super.supertypeGenericClassDecl(type) || original().supertypeGenericClassDecl(type);  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean localMethodsSignatureMap_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected HashMap localMethodsSignatureMap_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1084
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public HashMap localMethodsSignatureMap() {
     if(localMethodsSignatureMap_computed) {
       return localMethodsSignatureMap_value;
@@ -909,10 +995,12 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     localMethodsSignatureMap_value = localMethodsSignatureMap_compute();
-      if(true) localMethodsSignatureMap_computed = true;
+      if(true) {
+		localMethodsSignatureMap_computed = true;
+	}
     return localMethodsSignatureMap_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private HashMap localMethodsSignatureMap_compute() {
@@ -942,16 +1030,18 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     }
     return map;
   }
-  protected java.util.Map localFields_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1119
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localFields(String name) {
     Object _parameters = name;
-    if(localFields_String_values == null) localFields_String_values = new java.util.HashMap(4);
+    if(localFields_String_values == null) {
+		localFields_String_values = new java.util.HashMap(4);
+	}
     if(localFields_String_values.containsKey(_parameters)) {
       return (SimpleSet)localFields_String_values.get(_parameters);
     }
@@ -959,10 +1049,12 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     SimpleSet localFields_String_value = localFields_compute(name);
-      if(true) localFields_String_values.put(_parameters, localFields_String_value);
+      if(true) {
+		localFields_String_values.put(_parameters, localFields_String_value);
+	}
     return localFields_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localFields_compute(String name) {
@@ -992,24 +1084,26 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     }
     return set;
   }
-  protected java.util.Map localTypeDecls_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1154
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localTypeDecls(String name) {
     Object _parameters = name;
-    if(localTypeDecls_String_values == null) localTypeDecls_String_values = new java.util.HashMap(4);
+    if(localTypeDecls_String_values == null) {
+		localTypeDecls_String_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(localTypeDecls_String_values.containsKey(_parameters)) {
       Object _o = localTypeDecls_String_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return (SimpleSet)_o;
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -1023,7 +1117,7 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
       boolean isFinal = this.is$Final();
       SimpleSet new_localTypeDecls_String_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_localTypeDecls_String_value = localTypeDecls_compute(name);
         if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
@@ -1044,21 +1138,21 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
       state.IN_CIRCLE = false; 
       return new_localTypeDecls_String_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return (SimpleSet)_value.value;
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
+	if (state.RESET_CYCLE) {
         localTypeDecls_String_values.remove(_parameters);
       }
       else if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
         state.CHANGE = true;
         _value.value = new_localTypeDecls_String_value;
       }
-      return new_localTypeDecls_String_value;
-    }
-    return (SimpleSet)_value.value;
+	return new_localTypeDecls_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localTypeDecls_compute(String name) {
@@ -1109,20 +1203,13 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     }
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean constructors_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection constructors_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1213
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Collection constructors() {
     if(constructors_computed) {
       return constructors_value;
@@ -1131,10 +1218,12 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     constructors_value = constructors_compute();
-      if(isFinal && num == state().boundariesCrossed) constructors_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		constructors_computed = true;
+	}
     return constructors_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection constructors_compute() {
@@ -1156,10 +1245,11 @@ public class GenericClassDeclSubstituted extends GenericClassDecl implements Clo
     }
     return set;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
