@@ -18,16 +18,96 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production GenericInterfaceDeclSubstituted : {@link GenericInterfaceDecl} ::= <span class="component">&lt;Original:TypeDecl&gt;</span> <span class="component">{@link BodyDecl}*</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.ast:44
  */
-public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implements Cloneable, MemberSubstitutor {
+public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implements MemberSubstitutor {
+  private static final Logger logger = LoggerFactory.getLogger(GenericInterfaceDeclSubstituted.class);
+/**
+   * @apilevel internal
+   * @ast method 
+   * 
+   */
+  
   /**
+   * @apilevel internal
+   */
+  protected TypeDecl tokenTypeDecl_Original;
+/**
+   * @apilevel internal
+   */
+  protected boolean getBodyDeclList_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected List getBodyDeclList_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean sourceTypeDecl_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl sourceTypeDecl_value;
+protected java.util.Map instanceOf_TypeDecl_values;
+protected java.util.Map subtype_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean localMethodsSignatureMap_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected HashMap localMethodsSignatureMap_value;
+protected java.util.Map localFields_String_values;
+protected java.util.Map localTypeDecls_String_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean constructors_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection constructors_value;
+/**
+   * @ast method 
+   * 
+   */
+  public GenericInterfaceDeclSubstituted() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GenericInterfaceDeclSubstituted(Modifiers p0, String p1, List<Access> p2, List<TypeVariable> p3, TypeDecl p4) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+    setOriginal(p4);
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public GenericInterfaceDeclSubstituted(Modifiers p0, beaver.Symbol p1, List<Access> p2, List<TypeVariable> p3, TypeDecl p4) {
+    setChild(p0, 0);
+    setID(p1);
+    setChild(p2, 1);
+    setChild(p3, 2);
+    setOriginal(p4);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     getBodyDeclList_computed = false;
     getBodyDeclList_value = null;
@@ -42,16 +122,18 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     constructors_computed = false;
     constructors_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericInterfaceDeclSubstituted clone() throws CloneNotSupportedException {
     GenericInterfaceDeclSubstituted node = (GenericInterfaceDeclSubstituted)super.clone();
     node.getBodyDeclList_computed = false;
@@ -70,29 +152,33 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericInterfaceDeclSubstituted copy() {
     try {
       GenericInterfaceDeclSubstituted node = (GenericInterfaceDeclSubstituted) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public GenericInterfaceDeclSubstituted fullCopy() {
     GenericInterfaceDeclSubstituted tree = (GenericInterfaceDeclSubstituted) copy();
     if (children != null) {
@@ -111,16 +197,7 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     }
     return tree;
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericInterfaceDeclSubstituted() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -128,71 +205,54 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[4];
     setChild(new List(), 1);
     setChild(new List(), 2);
     setChild(new List(), 3);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericInterfaceDeclSubstituted(Modifiers p0, String p1, List<Access> p2, List<TypeVariable> p3, TypeDecl p4) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-    setOriginal(p4);
-  }
-  /**
-   * @ast method 
-   * 
-   */
-  public GenericInterfaceDeclSubstituted(Modifiers p0, beaver.Symbol p1, List<Access> p2, List<TypeVariable> p3, TypeDecl p4) {
-    setChild(p0, 0);
-    setID(p1);
-    setChild(p2, 1);
-    setChild(p3, 2);
-    setOriginal(p4);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 3;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Modifiers child.
    * @param node The new node to replace the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setModifiers(Modifiers node) {
+  @Override
+public void setModifiers(Modifiers node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * @return The current node used as the Modifiers child.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public Modifiers getModifiers() {
+  @Override
+public Modifiers getModifiers() {
     return (Modifiers)getChild(0);
   }
-  /**
+/**
    * Retrieves the Modifiers child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Modifiers child.
@@ -200,63 +260,70 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public Modifiers getModifiersNoTransform() {
+  @Override
+public Modifiers getModifiersNoTransform() {
     return (Modifiers)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the lexeme ID.
    * @param value The new value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setID(String value) {
+  @Override
+public void setID(String value) {
     tokenString_ID = value;
   }
-  /**
+/**
    * JastAdd-internal setter for lexeme ID using the Beaver parser.
    * @apilevel internal
    * @ast method 
    * 
    */
-  public void setID(beaver.Symbol symbol) {
-    if(symbol.value != null && !(symbol.value instanceof String))
-      throw new UnsupportedOperationException("setID is only valid for String lexemes");
+  @Override
+public void setID(beaver.Symbol symbol) {
+    if(symbol.value != null && !(symbol.value instanceof String)) {
+		throw new UnsupportedOperationException("setID is only valid for String lexemes");
+	}
     tokenString_ID = (String)symbol.value;
     IDstart = symbol.getStart();
     IDend = symbol.getEnd();
   }
-  /**
+/**
    * Retrieves the value for the lexeme ID.
    * @return The value for the lexeme ID.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public String getID() {
+  @Override
+public String getID() {
     return tokenString_ID != null ? tokenString_ID : "";
   }
-  /**
+/**
    * Replaces the SuperInterfaceId list.
    * @param list The new list node to be used as the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setSuperInterfaceIdList(List<Access> list) {
+  @Override
+public void setSuperInterfaceIdList(List<Access> list) {
     setChild(list, 1);
   }
-  /**
+/**
    * Retrieves the number of children in the SuperInterfaceId list.
    * @return Number of children in the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumSuperInterfaceId() {
+  @Override
+public int getNumSuperInterfaceId() {
     return getSuperInterfaceIdList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the SuperInterfaceId list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the SuperInterfaceId list.
@@ -264,10 +331,11 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public int getNumSuperInterfaceIdNoTransform() {
+  @Override
+public int getNumSuperInterfaceIdNoTransform() {
     return getSuperInterfaceIdListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the SuperInterfaceId list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the SuperInterfaceId list.
@@ -275,31 +343,34 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Access getSuperInterfaceId(int i) {
     return (Access)getSuperInterfaceIdList().getChild(i);
   }
-  /**
+/**
    * Append an element to the SuperInterfaceId list.
    * @param node The element to append to the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addSuperInterfaceId(Access node) {
+  @Override
+public void addSuperInterfaceId(Access node) {
     List<Access> list = (parent == null || state == null) ? getSuperInterfaceIdListNoTransform() : getSuperInterfaceIdList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addSuperInterfaceIdNoTransform(Access node) {
+  @Override
+public void addSuperInterfaceIdNoTransform(Access node) {
     List<Access> list = getSuperInterfaceIdListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the SuperInterfaceId list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -307,21 +378,23 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public void setSuperInterfaceId(Access node, int i) {
+  @Override
+public void setSuperInterfaceId(Access node, int i) {
     List<Access> list = getSuperInterfaceIdList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * @return The node representing the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<Access> getSuperInterfaceIds() {
+  @Override
+public List<Access> getSuperInterfaceIds() {
     return getSuperInterfaceIdList();
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the SuperInterfaceId list.
@@ -329,23 +402,25 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public List<Access> getSuperInterfaceIdsNoTransform() {
+  @Override
+public List<Access> getSuperInterfaceIdsNoTransform() {
     return getSuperInterfaceIdListNoTransform();
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * @return The node representing the SuperInterfaceId list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getSuperInterfaceIdList() {
     List<Access> list = (List<Access>)getChild(1);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the SuperInterfaceId list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the SuperInterfaceId list.
@@ -353,31 +428,34 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<Access> getSuperInterfaceIdListNoTransform() {
     return (List<Access>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the TypeParameter list.
    * @param list The new list node to be used as the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setTypeParameterList(List<TypeVariable> list) {
+  @Override
+public void setTypeParameterList(List<TypeVariable> list) {
     setChild(list, 2);
   }
-  /**
+/**
    * Retrieves the number of children in the TypeParameter list.
    * @return Number of children in the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumTypeParameter() {
+  @Override
+public int getNumTypeParameter() {
     return getTypeParameterList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the TypeParameter list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the TypeParameter list.
@@ -385,10 +463,11 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public int getNumTypeParameterNoTransform() {
+  @Override
+public int getNumTypeParameterNoTransform() {
     return getTypeParameterListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the TypeParameter list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the TypeParameter list.
@@ -396,31 +475,34 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeVariable getTypeParameter(int i) {
     return (TypeVariable)getTypeParameterList().getChild(i);
   }
-  /**
+/**
    * Append an element to the TypeParameter list.
    * @param node The element to append to the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addTypeParameter(TypeVariable node) {
+  @Override
+public void addTypeParameter(TypeVariable node) {
     List<TypeVariable> list = (parent == null || state == null) ? getTypeParameterListNoTransform() : getTypeParameterList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addTypeParameterNoTransform(TypeVariable node) {
+  @Override
+public void addTypeParameterNoTransform(TypeVariable node) {
     List<TypeVariable> list = getTypeParameterListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the TypeParameter list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -428,21 +510,23 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public void setTypeParameter(TypeVariable node, int i) {
+  @Override
+public void setTypeParameter(TypeVariable node, int i) {
     List<TypeVariable> list = getTypeParameterList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * @return The node representing the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<TypeVariable> getTypeParameters() {
+  @Override
+public List<TypeVariable> getTypeParameters() {
     return getTypeParameterList();
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeParameter list.
@@ -450,23 +534,25 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public List<TypeVariable> getTypeParametersNoTransform() {
+  @Override
+public List<TypeVariable> getTypeParametersNoTransform() {
     return getTypeParameterListNoTransform();
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * @return The node representing the TypeParameter list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<TypeVariable> getTypeParameterList() {
     List<TypeVariable> list = (List<TypeVariable>)getChild(2);
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the TypeParameter list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the TypeParameter list.
@@ -474,11 +560,12 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List<TypeVariable> getTypeParameterListNoTransform() {
     return (List<TypeVariable>)getChildNoTransform(2);
   }
-  /**
+/**
    * Replaces the lexeme Original.
    * @param value The new value for the lexeme Original.
    * @apilevel high-level
@@ -488,17 +575,7 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   public void setOriginal(TypeDecl value) {
     tokenTypeDecl_Original = value;
   }
-  /**
-   * @apilevel internal
-   * @ast method 
-   * 
-   */
-  
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl tokenTypeDecl_Original;
-  /**
+/**
    * Retrieves the value for the lexeme Original.
    * @return The value for the lexeme Original.
    * @apilevel high-level
@@ -508,27 +585,29 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   public TypeDecl getOriginal() {
     return tokenTypeDecl_Original;
   }
-  /**
+/**
    * Replaces the BodyDecl list.
    * @param list The new list node to be used as the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void setBodyDeclList(List<BodyDecl> list) {
+  @Override
+public void setBodyDeclList(List<BodyDecl> list) {
     setChild(list, 3);
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * @return Number of children in the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public int getNumBodyDecl() {
+  @Override
+public int getNumBodyDecl() {
     return getBodyDeclList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the BodyDecl list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the BodyDecl list.
@@ -536,10 +615,11 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public int getNumBodyDeclNoTransform() {
+  @Override
+public int getNumBodyDeclNoTransform() {
     return getBodyDeclListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the BodyDecl list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the BodyDecl list.
@@ -547,31 +627,34 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public BodyDecl getBodyDecl(int i) {
     return (BodyDecl)getBodyDeclList().getChild(i);
   }
-  /**
+/**
    * Append an element to the BodyDecl list.
    * @param node The element to append to the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public void addBodyDecl(BodyDecl node) {
+  @Override
+public void addBodyDecl(BodyDecl node) {
     List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  public void addBodyDeclNoTransform(BodyDecl node) {
+  @Override
+public void addBodyDeclNoTransform(BodyDecl node) {
     List<BodyDecl> list = getBodyDeclListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the BodyDecl list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -579,21 +662,23 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public void setBodyDecl(BodyDecl node, int i) {
+  @Override
+public void setBodyDecl(BodyDecl node, int i) {
     List<BodyDecl> list = getBodyDeclList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * @return The node representing the BodyDecl list.
    * @apilevel high-level
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDecls() {
+  @Override
+public List<BodyDecl> getBodyDecls() {
     return getBodyDeclList();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -601,10 +686,11 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclsNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclsNoTransform() {
     return getBodyDeclListNoTransform();
   }
-  /**
+/**
    * Retrieves the BodyDecl list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the BodyDecl list.
@@ -612,10 +698,11 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
    * @ast method 
    * 
    */
-  public List<BodyDecl> getBodyDeclListNoTransform() {
+  @Override
+public List<BodyDecl> getBodyDeclListNoTransform() {
     return (List<BodyDecl>)getChildNoTransform(3);
   }
-  /**
+/**
    * Retrieves the child position of the BodyDecl list.
    * @return The the child position of the BodyDecl list.
    * @apilevel low-level
@@ -625,31 +712,25 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   protected int getBodyDeclListChildPosition() {
     return 3;
   }
-  /**
+/**
    * @attribute syn
    * @aspect NestedTypes
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/TypeAnalysis.jrag:569
    */
-  public TypeDecl hostType() {
+  @Override
+public TypeDecl hostType() {
     ASTNode$State state = state();
     try {  return getOriginal();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean getBodyDeclList_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected List getBodyDeclList_value;
-  /**
+/**
    * @attribute syn nta
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1053
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public List getBodyDeclList() {
     if(getBodyDeclList_computed) {
       return (List) getChild(getBodyDeclListChildPosition());
@@ -659,38 +740,34 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   boolean isFinal = this.is$Final();
     getBodyDeclList_value = getBodyDeclList_compute();
     setBodyDeclList(getBodyDeclList_value);
-      if(isFinal && num == state().boundariesCrossed) getBodyDeclList_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		getBodyDeclList_computed = true;
+	}
     return (List) getChild(getBodyDeclListChildPosition());
   }
-  /**
+/**
    * @apilevel internal
    */
   private List getBodyDeclList_compute() {  return new BodyDeclList();  }
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1306
    */
-  public TypeDecl original() {
+  @Override
+public TypeDecl original() {
     ASTNode$State state = state();
     try {  return getOriginal().original();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean sourceTypeDecl_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl sourceTypeDecl_value;
-  /**
+/**
    * @attribute syn
    * @aspect SourceDeclarations
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1509
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TypeDecl sourceTypeDecl() {
     if(sourceTypeDecl_computed) {
       return sourceTypeDecl_value;
@@ -699,23 +776,27 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     sourceTypeDecl_value = sourceTypeDecl_compute();
-      if(isFinal && num == state().boundariesCrossed) sourceTypeDecl_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		sourceTypeDecl_computed = true;
+	}
     return sourceTypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private TypeDecl sourceTypeDecl_compute() {  return original().sourceTypeDecl();  }
-  protected java.util.Map instanceOf_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:489
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean instanceOf(TypeDecl type) {
     Object _parameters = type;
-    if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
+    if(instanceOf_TypeDecl_values == null) {
+		instanceOf_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -723,31 +804,35 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
-      if(isFinal && num == state().boundariesCrossed) instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		instanceOf_TypeDecl_values.put(_parameters, Boolean.valueOf(instanceOf_TypeDecl_value));
+	}
     return instanceOf_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean instanceOf_compute(TypeDecl type) {  return subtype(type);  }
-  protected java.util.Map subtype_TypeDecl_values;
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:521
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean subtype(TypeDecl type) {
     Object _parameters = type;
-    if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
+    if(subtype_TypeDecl_values == null) {
+		subtype_TypeDecl_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(subtype_TypeDecl_values.containsKey(_parameters)) {
       Object _o = subtype_TypeDecl_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -761,7 +846,7 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
       boolean isFinal = this.is$Final();
       boolean new_subtype_TypeDecl_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_subtype_TypeDecl_value = subtype_compute(type);
         if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
@@ -782,60 +867,55 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
       state.IN_CIRCLE = false; 
       return new_subtype_TypeDecl_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_subtype_TypeDecl_value = subtype_compute(type);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_subtype_TypeDecl_value = subtype_compute(type);
+	if (state.RESET_CYCLE) {
         subtype_TypeDecl_values.remove(_parameters);
       }
       else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_subtype_TypeDecl_value;
       }
-      return new_subtype_TypeDecl_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_subtype_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean subtype_compute(TypeDecl type) {  return type.supertypeGenericInterfaceDeclSubstituted(this);  }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:523
    */
-  public boolean supertypeGenericInterfaceDeclSubstituted(GenericInterfaceDeclSubstituted type) {
+  @Override
+public boolean supertypeGenericInterfaceDeclSubstituted(GenericInterfaceDeclSubstituted type) {
     ASTNode$State state = state();
     try {  return original() == type.original() && type.enclosingType().subtype(enclosingType()) || super.supertypeGenericInterfaceDeclSubstituted(type);  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect GenericsSubtype
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/GenericsSubtype.jrag:20
    */
-  public boolean supertypeGenericInterfaceDecl(GenericInterfaceDecl type) {
+  @Override
+public boolean supertypeGenericInterfaceDecl(GenericInterfaceDecl type) {
     ASTNode$State state = state();
     try {  return super.supertypeGenericInterfaceDecl(type) || original().supertypeGenericInterfaceDecl(type);  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean localMethodsSignatureMap_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected HashMap localMethodsSignatureMap_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1084
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public HashMap localMethodsSignatureMap() {
     if(localMethodsSignatureMap_computed) {
       return localMethodsSignatureMap_value;
@@ -844,10 +924,12 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     localMethodsSignatureMap_value = localMethodsSignatureMap_compute();
-      if(true) localMethodsSignatureMap_computed = true;
+      if(true) {
+		localMethodsSignatureMap_computed = true;
+	}
     return localMethodsSignatureMap_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private HashMap localMethodsSignatureMap_compute() {
@@ -877,16 +959,18 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     }
     return map;
   }
-  protected java.util.Map localFields_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1119
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localFields(String name) {
     Object _parameters = name;
-    if(localFields_String_values == null) localFields_String_values = new java.util.HashMap(4);
+    if(localFields_String_values == null) {
+		localFields_String_values = new java.util.HashMap(4);
+	}
     if(localFields_String_values.containsKey(_parameters)) {
       return (SimpleSet)localFields_String_values.get(_parameters);
     }
@@ -894,10 +978,12 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     SimpleSet localFields_String_value = localFields_compute(name);
-      if(true) localFields_String_values.put(_parameters, localFields_String_value);
+      if(true) {
+		localFields_String_values.put(_parameters, localFields_String_value);
+	}
     return localFields_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localFields_compute(String name) {
@@ -927,24 +1013,26 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     }
     return set;
   }
-  protected java.util.Map localTypeDecls_String_values;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1154
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public SimpleSet localTypeDecls(String name) {
     Object _parameters = name;
-    if(localTypeDecls_String_values == null) localTypeDecls_String_values = new java.util.HashMap(4);
+    if(localTypeDecls_String_values == null) {
+		localTypeDecls_String_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(localTypeDecls_String_values.containsKey(_parameters)) {
       Object _o = localTypeDecls_String_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return (SimpleSet)_o;
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -958,7 +1046,7 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
       boolean isFinal = this.is$Final();
       SimpleSet new_localTypeDecls_String_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_localTypeDecls_String_value = localTypeDecls_compute(name);
         if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
@@ -979,21 +1067,21 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
       state.IN_CIRCLE = false; 
       return new_localTypeDecls_String_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return (SimpleSet)_value.value;
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	SimpleSet new_localTypeDecls_String_value = localTypeDecls_compute(name);
+	if (state.RESET_CYCLE) {
         localTypeDecls_String_values.remove(_parameters);
       }
       else if ((new_localTypeDecls_String_value==null && (SimpleSet)_value.value!=null) || (new_localTypeDecls_String_value!=null && !new_localTypeDecls_String_value.equals((SimpleSet)_value.value))) {
         state.CHANGE = true;
         _value.value = new_localTypeDecls_String_value;
       }
-      return new_localTypeDecls_String_value;
-    }
-    return (SimpleSet)_value.value;
+	return new_localTypeDecls_String_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private SimpleSet localTypeDecls_compute(String name) {
@@ -1044,20 +1132,13 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     }
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean constructors_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection constructors_value;
-  /**
+/**
    * @attribute syn
    * @aspect LookupParTypeDecl
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.5Frontend/Generics.jrag:1213
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public Collection constructors() {
     if(constructors_computed) {
       return constructors_value;
@@ -1066,10 +1147,12 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     constructors_value = constructors_compute();
-      if(isFinal && num == state().boundariesCrossed) constructors_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		constructors_computed = true;
+	}
     return constructors_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection constructors_compute() {
@@ -1091,10 +1174,11 @@ public class GenericInterfaceDeclSubstituted extends GenericInterfaceDecl implem
     }
     return set;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
