@@ -18,16 +18,162 @@ import soot.coffi.method_info;
 import soot.coffi.CONSTANT_Utf8_info;
 import soot.tagkit.SourceFileTag;
 import soot.coffi.CoffiMethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 /**
  * @production TryStmt : {@link Stmt} ::= <span class="component">{@link Block}</span> <span class="component">{@link CatchClause}*</span> <span class="component">[Finally:{@link Block}]</span>;
  * @ast node
  * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/java.ast:219
  */
-public class TryStmt extends Stmt implements Cloneable, FinallyHost {
-  /**
+public class TryStmt extends Stmt implements FinallyHost {
+  private static final Logger logger = LoggerFactory.getLogger(TryStmt.class);
+/**
+   * @apilevel internal
+   */
+  protected boolean branches_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection branches_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean branchesFromFinally_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection branchesFromFinally_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean targetBranches_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection targetBranches_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean escapedBranches_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected Collection escapedBranches_value;
+protected java.util.Map isDAafter_Variable_values;
+protected java.util.Map isDUbefore_Variable_values;
+protected java.util.Map isDUafter_Variable_values;
+protected java.util.Map catchableException_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean canCompleteNormally_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected boolean canCompleteNormally_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_begin_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_begin_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_block_end_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_block_end_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_end_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_end_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_finally_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_finally_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_finally_block_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_finally_block_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_exception_handler_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_exception_handler_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean label_catch_end_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected soot.jimple.Stmt label_catch_end_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean exceptionRanges_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected ArrayList exceptionRanges_value;
+protected java.util.Map handlesException_TypeDecl_values;
+/**
+   * @apilevel internal
+   */
+  protected boolean typeError_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl typeError_value;
+/**
+   * @apilevel internal
+   */
+  protected boolean typeRuntimeException_computed = false;
+/**
+   * @apilevel internal
+   */
+  protected TypeDecl typeRuntimeException_value;
+/**
+   * @ast method 
+   * 
+   */
+  public TryStmt() {
+
+
+  }
+/**
+   * @ast method 
+   * 
+   */
+  public TryStmt(Block p0, List<CatchClause> p1, Opt<Block> p2) {
+    setChild(p0, 0);
+    setChild(p1, 1);
+    setChild(p2, 2);
+  }
+/**
    * @apilevel low-level
    */
-  public void flushCache() {
+  @Override
+public void flushCache() {
     super.flushCache();
     branches_computed = false;
     branches_value = null;
@@ -64,16 +210,18 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     typeRuntimeException_computed = false;
     typeRuntimeException_value = null;
   }
-  /**
+/**
    * @apilevel internal
    */
-  public void flushCollectionCache() {
+  @Override
+public void flushCollectionCache() {
     super.flushCollectionCache();
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TryStmt clone() throws CloneNotSupportedException {
     TryStmt node = (TryStmt)super.clone();
     node.branches_computed = false;
@@ -114,29 +262,33 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     node.is$Final(false);
     return node;
   }
-  /**
+/**
    * @apilevel internal
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TryStmt copy() {
     try {
       TryStmt node = (TryStmt) clone();
       node.parent = null;
-      if(children != null)
-        node.children = (ASTNode[]) children.clone();
+      if(children != null) {
+		node.children = (ASTNode[]) children.clone();
+	}
       return node;
     } catch (CloneNotSupportedException e) {
-      throw new Error("Error: clone not supported for " +
+      logger.error(e.getMessage(), e);
+	throw new Error("Error: clone not supported for " +
         getClass().getName());
     }
   }
-  /**
+/**
    * Create a deep copy of the AST subtree at this node.
    * The copy is dangling, i.e. has no parent.
    * @return dangling copy of the subtree at this node
    * @apilevel low-level
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public TryStmt fullCopy() {
     TryStmt tree = (TryStmt) copy();
     if (children != null) {
@@ -150,65 +302,78 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     }
     return tree;
   }
-  /**
+/**
    * @ast method 
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:60
    */
-  public void collectBranches(Collection c) {
+  @Override
+public void collectBranches(Collection c) {
     c.addAll(escapedBranches());
   }
-  /**
+/**
    * @ast method 
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:161
    */
-  public Stmt branchTarget(Stmt branchStmt) {
-    if(targetBranches().contains(branchStmt))
-      return this;
+  @Override
+public Stmt branchTarget(Stmt branchStmt) {
+    if(targetBranches().contains(branchStmt)) {
+		return this;
+	}
     return super.branchTarget(branchStmt);
   }
-  /**
+/**
    * @ast method 
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:199
    */
-  public void collectFinally(Stmt branchStmt, ArrayList list) {
-    if(hasFinally() && !branchesFromFinally().contains(branchStmt))
-      list.add(this);
-    if(targetBranches().contains(branchStmt))
-      return;
+  @Override
+public void collectFinally(Stmt branchStmt, ArrayList list) {
+    if(hasFinally() && !branchesFromFinally().contains(branchStmt)) {
+		list.add(this);
+	}
+    if(targetBranches().contains(branchStmt)) {
+		return;
+	}
     super.collectFinally(branchStmt, list);
   }
-  /**
+/**
    * @ast method 
    * @aspect ExceptionHandling
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:231
    */
-  protected boolean reachedException(TypeDecl type) {
+  @Override
+protected boolean reachedException(TypeDecl type) {
     boolean found = false;
     // found is true if the exception type is caught by a catch clause
-    for(int i = 0; i < getNumCatchClause() && !found; i++)
-      if(getCatchClause(i).handles(type))
-        found = true;
-    // if an exception is thrown in the block and the exception is not caught and
+    for(int i = 0; i < getNumCatchClause() && !found; i++) {
+		if(getCatchClause(i).handles(type)) {
+			found = true;
+		}
+	}
+    boolean condition = !found && (!hasFinally() || getFinally().canCompleteNormally()) && getBlock().reachedException(type);
+	// if an exception is thrown in the block and the exception is not caught and
     // either there is no finally block or the finally block can complete normally
-    if(!found && (!hasFinally() || getFinally().canCompleteNormally()) )
-      if(getBlock().reachedException(type))
-        return true;
+    if(condition ) {
+		return true;
+	}
     // even if the exception is caught by the catch clauses they may 
     // throw new exceptions
-    for(int i = 0; i < getNumCatchClause(); i++)
-      if(getCatchClause(i).reachedException(type))
-        return true;
+    for(int i = 0; i < getNumCatchClause(); i++) {
+		if(getCatchClause(i).reachedException(type)) {
+			return true;
+		}
+	}
     return hasFinally() && getFinally().reachedException(type);
   }
-  /**
+/**
    * @ast method 
    * @aspect PrettyPrint
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/PrettyPrint.jadd:707
    */
-  public void toString(StringBuffer s) {
+  @Override
+public void toString(StringBuffer s) {
     s.append(indent());
     s.append("try ");
     getBlock().toString(s);
@@ -216,30 +381,34 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       s.append(indent());
       getCatchClause(i).toString(s);
     }
-    if(hasFinally()) {
-      s.append(indent());
-      s.append("finally ");
-      getFinally().toString(s);
-    }
+    if (!hasFinally()) {
+		return;
+	}
+	s.append(indent());
+	s.append("finally ");
+	getFinally().toString(s);
   }
-  /**
+/**
    * @ast method 
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:322
    */
-  public void emitFinallyCode(Body b) {
-    if(hasFinally()) {
-      // Clear cached attributes to force re-evaluation of local variables
+  @Override
+public void emitFinallyCode(Body b) {
+    if (!hasFinally()) {
+		return;
+	}
+	// Clear cached attributes to force re-evaluation of local variables
       getFinally().flushCaches();
-      getFinally().jimplify2(b);
-    }
+	getFinally().jimplify2(b);
   }
-  /**
+/**
    * @ast method 
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:358
    */
-  public void jimplify2(Body b) {
+  @Override
+public void jimplify2(Body b) {
     ArrayList ranges = exceptionRanges();
     b.addLabel(label_begin());
     ranges.add(label_begin());
@@ -253,12 +422,14 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       }
       emitFinallyCode(b);
       b.setLine(this);
-      if((!hasFinally() || getFinally().canCompleteNormally()) && (getNumCatchClause() != 0 || hasFinally()/*needsFinallyTrap()*/))
-        b.add(b.newGotoStmt(label_end = label_end(), this));
+      if((!hasFinally() || getFinally().canCompleteNormally()) && (getNumCatchClause() != 0 || hasFinally()/*needsFinallyTrap()*/)) {
+		b.add(b.newGotoStmt(label_end = label_end(), this));
+	}
     }
     if(getNumCatchClause() != 0) {
-      if(label_block_end == null)
-        label_block_end = ((BasicCatch)getCatchClause(0)).label();
+      if(label_block_end == null) {
+		label_block_end = ((BasicCatch)getCatchClause(0)).label();
+	}
       ranges.add(label_block_end);
       ranges.add(label_block_end);
       for(int i = 0; i < getNumCatchClause(); i++) {
@@ -268,8 +439,9 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
           b.setLine(getCatchClause(i));
           endExceptionRange(b, ranges);
           emitFinallyCode(b);
-          if(!hasFinally() || getFinally().canCompleteNormally())
-            b.add(b.newGotoStmt(label_end = label_end(), this));
+          if(!hasFinally() || getFinally().canCompleteNormally()) {
+			b.add(b.newGotoStmt(label_end = label_end(), this));
+		}
           beginExceptionRange(b, ranges);
         }
         b.setLine(getCatchClause(i));
@@ -283,8 +455,9 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       //if(getFinally().canCompleteNormally())
       //  b.add(b.newGotoStmt(label_end(), this));
     }
-    if(label_end != null)
-      b.addLabel(label_end);
+    if(label_end != null) {
+		b.addLabel(label_end);
+	}
     // createExceptionTable
     for(int i = 0; i < getNumCatchClause(); i++) {
       for(Iterator iter = ranges.iterator(); iter.hasNext(); ) {
@@ -300,18 +473,20 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
 	          );
 			addFallThroughLabelTag(b, lbl, label_end);
         }
-        if(stmtEnd == label_block_end)
-          break;
+        if(stmtEnd == label_block_end) {
+			break;
+		}
       }
     }
     if(hasFinally() /*&& needsFinallyTrap()*/) {
       for(Iterator iter = ranges.iterator(); iter.hasNext(); ) {
         soot.jimple.Stmt stmtBegin = (soot.jimple.Stmt)iter.next();
         soot.jimple.Stmt stmtEnd;
-        if(iter.hasNext())
-          stmtEnd = (soot.jimple.Stmt)iter.next();
-        else
-          stmtEnd = label_exception_handler();
+        if(iter.hasNext()) {
+			stmtEnd = (soot.jimple.Stmt)iter.next();
+		} else {
+			stmtEnd = label_exception_handler();
+		}
         if(stmtBegin != stmtEnd) {
           soot.jimple.Stmt lbl = label_exception_handler();
 		  b.addTrap(typeThrowable(), stmtBegin, stmtEnd, lbl);
@@ -328,7 +503,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       */
     }
   }
-  /**
+/**
    * @ast method 
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:448
@@ -342,7 +517,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
 	}
 	tag.register(handler, fallThrough);
   }
-  /**
+/**
    * @ast method 
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:482
@@ -358,16 +533,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       b.add(throwStmt);
     //}
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public TryStmt() {
-    super();
-
-
-  }
-  /**
+/**
    * Initializes the child array to the correct size.
    * Initializes List and Opt nta children.
    * @apilevel internal
@@ -375,37 +541,31 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
    * @ast method 
    * 
    */
-  public void init$Children() {
+  @Override
+public void init$Children() {
     children = new ASTNode[3];
     setChild(new List(), 1);
     setChild(new Opt(), 2);
   }
-  /**
-   * @ast method 
-   * 
-   */
-  public TryStmt(Block p0, List<CatchClause> p1, Opt<Block> p2) {
-    setChild(p0, 0);
-    setChild(p1, 1);
-    setChild(p2, 2);
-  }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
    */
-  protected int numChildren() {
+  @Override
+protected int numChildren() {
     return 3;
   }
-  /**
+/**
    * @apilevel internal
    * @ast method 
    * 
    */
-  public boolean mayHaveRewrite() {
+  @Override
+public boolean mayHaveRewrite() {
     return false;
   }
-  /**
+/**
    * Replaces the Block child.
    * @param node The new node to replace the Block child.
    * @apilevel high-level
@@ -415,7 +575,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public void setBlock(Block node) {
     setChild(node, 0);
   }
-  /**
+/**
    * Retrieves the Block child.
    * @return The current node used as the Block child.
    * @apilevel high-level
@@ -425,7 +585,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public Block getBlock() {
     return (Block)getChild(0);
   }
-  /**
+/**
    * Retrieves the Block child.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The current node used as the Block child.
@@ -436,7 +596,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public Block getBlockNoTransform() {
     return (Block)getChildNoTransform(0);
   }
-  /**
+/**
    * Replaces the CatchClause list.
    * @param list The new list node to be used as the CatchClause list.
    * @apilevel high-level
@@ -446,7 +606,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public void setCatchClauseList(List<CatchClause> list) {
     setChild(list, 1);
   }
-  /**
+/**
    * Retrieves the number of children in the CatchClause list.
    * @return Number of children in the CatchClause list.
    * @apilevel high-level
@@ -456,7 +616,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public int getNumCatchClause() {
     return getCatchClauseList().getNumChild();
   }
-  /**
+/**
    * Retrieves the number of children in the CatchClause list.
    * Calling this method will not trigger rewrites..
    * @return Number of children in the CatchClause list.
@@ -467,7 +627,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public int getNumCatchClauseNoTransform() {
     return getCatchClauseListNoTransform().getNumChildNoTransform();
   }
-  /**
+/**
    * Retrieves the element at index {@code i} in the CatchClause list..
    * @param i Index of the element to return.
    * @return The element at position {@code i} in the CatchClause list.
@@ -479,7 +639,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public CatchClause getCatchClause(int i) {
     return (CatchClause)getCatchClauseList().getChild(i);
   }
-  /**
+/**
    * Append an element to the CatchClause list.
    * @param node The element to append to the CatchClause list.
    * @apilevel high-level
@@ -490,7 +650,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     List<CatchClause> list = (parent == null || state == null) ? getCatchClauseListNoTransform() : getCatchClauseList();
     list.addChild(node);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
@@ -499,7 +659,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     List<CatchClause> list = getCatchClauseListNoTransform();
     list.addChild(node);
   }
-  /**
+/**
    * Replaces the CatchClause list element at index {@code i} with the new node {@code node}.
    * @param node The new node to replace the old list element.
    * @param i The list index of the node to be replaced.
@@ -511,7 +671,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     List<CatchClause> list = getCatchClauseList();
     list.setChild(node, i);
   }
-  /**
+/**
    * Retrieves the CatchClause list.
    * @return The node representing the CatchClause list.
    * @apilevel high-level
@@ -521,7 +681,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public List<CatchClause> getCatchClauses() {
     return getCatchClauseList();
   }
-  /**
+/**
    * Retrieves the CatchClause list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the CatchClause list.
@@ -532,7 +692,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public List<CatchClause> getCatchClausesNoTransform() {
     return getCatchClauseListNoTransform();
   }
-  /**
+/**
    * Retrieves the CatchClause list.
    * @return The node representing the CatchClause list.
    * @apilevel high-level
@@ -545,7 +705,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     list.getNumChild();
     return list;
   }
-  /**
+/**
    * Retrieves the CatchClause list.
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The node representing the CatchClause list.
@@ -557,7 +717,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public List<CatchClause> getCatchClauseListNoTransform() {
     return (List<CatchClause>)getChildNoTransform(1);
   }
-  /**
+/**
    * Replaces the optional node for the Finally child. This is the {@code Opt} node containing the child Finally, not the actual child!
    * @param opt The new node to be used as the optional node for the Finally child.
    * @apilevel low-level
@@ -567,7 +727,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public void setFinallyOpt(Opt<Block> opt) {
     setChild(opt, 2);
   }
-  /**
+/**
    * Check whether the optional Finally child exists.
    * @return {@code true} if the optional Finally child exists, {@code false} if it does not.
    * @apilevel high-level
@@ -577,7 +737,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public boolean hasFinally() {
     return getFinallyOpt().getNumChild() != 0;
   }
-  /**
+/**
    * Retrieves the (optional) Finally child.
    * @return The Finally child, if it exists. Returns {@code null} otherwise.
    * @apilevel low-level
@@ -588,7 +748,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public Block getFinally() {
     return (Block)getFinallyOpt().getChild(0);
   }
-  /**
+/**
    * Replaces the (optional) Finally child.
    * @param node The new node to be used as the Finally child.
    * @apilevel high-level
@@ -598,7 +758,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public void setFinally(Block node) {
     getFinallyOpt().setChild(node, 0);
   }
-  /**
+/**
    * @apilevel low-level
    * @ast method 
    * 
@@ -607,7 +767,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public Opt<Block> getFinallyOpt() {
     return (Opt<Block>)getChild(2);
   }
-  /**
+/**
    * Retrieves the optional node for child Finally. This is the {@code Opt} node containing the child Finally, not the actual child!
    * <p><em>This method does not invoke AST transformations.</em></p>
    * @return The optional node for child Finally.
@@ -619,15 +779,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   public Opt<Block> getFinallyOptNoTransform() {
     return (Opt<Block>)getChildNoTransform(2);
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean branches_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection branches_value;
-  /**
+/**
    * @attribute syn
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:115
@@ -641,28 +793,23 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     branches_value = branches_compute();
-      if(isFinal && num == state().boundariesCrossed) branches_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		branches_computed = true;
+	}
     return branches_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection branches_compute() {
     HashSet set = new HashSet();
     getBlock().collectBranches(set);
-    for(int i = 0; i < getNumCatchClause(); i++)
-      getCatchClause(i).collectBranches(set);
+    for(int i = 0; i < getNumCatchClause(); i++) {
+		getCatchClause(i).collectBranches(set);
+	}
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean branchesFromFinally_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection branchesFromFinally_value;
-  /**
+/**
    * @attribute syn
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:123
@@ -676,27 +823,22 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     branchesFromFinally_value = branchesFromFinally_compute();
-      if(isFinal && num == state().boundariesCrossed) branchesFromFinally_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		branchesFromFinally_computed = true;
+	}
     return branchesFromFinally_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection branchesFromFinally_compute() {
     HashSet set = new HashSet();
-    if(hasFinally())
-      getFinally().collectBranches(set);
+    if(hasFinally()) {
+		getFinally().collectBranches(set);
+	}
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean targetBranches_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection targetBranches_value;
-  /**
+/**
    * @attribute syn
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:131
@@ -710,27 +852,22 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     targetBranches_value = targetBranches_compute();
-      if(isFinal && num == state().boundariesCrossed) targetBranches_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		targetBranches_computed = true;
+	}
     return targetBranches_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection targetBranches_compute() {
     HashSet set = new HashSet();
-    if(hasFinally() && !getFinally().canCompleteNormally())
-      set.addAll(branches());
+    if(hasFinally() && !getFinally().canCompleteNormally()) {
+		set.addAll(branches());
+	}
     return set;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean escapedBranches_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected Collection escapedBranches_value;
-  /**
+/**
    * @attribute syn
    * @aspect BranchTarget
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/BranchTarget.jrag:139
@@ -744,30 +881,36 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     escapedBranches_value = escapedBranches_compute();
-      if(isFinal && num == state().boundariesCrossed) escapedBranches_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		escapedBranches_computed = true;
+	}
     return escapedBranches_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private Collection escapedBranches_compute() {
     HashSet set = new HashSet();
-    if(hasFinally())
-      set.addAll(branchesFromFinally());
-    if(!hasFinally() || getFinally().canCompleteNormally())
-      set.addAll(branches());
+    if(hasFinally()) {
+		set.addAll(branchesFromFinally());
+	}
+    if(!hasFinally() || getFinally().canCompleteNormally()) {
+		set.addAll(branches());
+	}
     return set;
   }
-  protected java.util.Map isDAafter_Variable_values;
-  /**
+/**
    * @attribute syn
    * @aspect DA
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:666
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean isDAafter(Variable v) {
     Object _parameters = v;
-    if(isDAafter_Variable_values == null) isDAafter_Variable_values = new java.util.HashMap(4);
+    if(isDAafter_Variable_values == null) {
+		isDAafter_Variable_values = new java.util.HashMap(4);
+	}
     if(isDAafter_Variable_values.containsKey(_parameters)) {
       return ((Boolean)isDAafter_Variable_values.get(_parameters)).booleanValue();
     }
@@ -775,74 +918,87 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean isDAafter_Variable_value = isDAafter_compute(v);
-      if(isFinal && num == state().boundariesCrossed) isDAafter_Variable_values.put(_parameters, Boolean.valueOf(isDAafter_Variable_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		isDAafter_Variable_values.put(_parameters, Boolean.valueOf(isDAafter_Variable_value));
+	}
     return isDAafter_Variable_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean isDAafter_compute(Variable v) {
     // 16.2.15 4th bullet
     if(!hasFinally()) {
-      if(!getBlock().isDAafter(v))
-        return false;
-      for(int i = 0; i < getNumCatchClause(); i++)
-        if(!getCatchClause(i).getBlock().isDAafter(v))
-          return false;
+      if(!getBlock().isDAafter(v)) {
+		return false;
+	}
+      for(int i = 0; i < getNumCatchClause(); i++) {
+		if(!getCatchClause(i).getBlock().isDAafter(v)) {
+			return false;
+		}
+	}
       return true;
     }
     else {
       // 16.2.15 5th bullet
-      if(getFinally().isDAafter(v))
-        return true;
-      if(!getBlock().isDAafter(v))
-        return false;
-      for(int i = 0; i < getNumCatchClause(); i++)
-        if(!getCatchClause(i).getBlock().isDAafter(v))
-          return false;
+      if(getFinally().isDAafter(v)) {
+		return true;
+	}
+      if(!getBlock().isDAafter(v)) {
+		return false;
+	}
+      for(int i = 0; i < getNumCatchClause(); i++) {
+		if(!getCatchClause(i).getBlock().isDAafter(v)) {
+			return false;
+		}
+	}
       return true;
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect DU
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:914
    */
-  public boolean isDUafterFinally(Variable v) {
+  @Override
+public boolean isDUafterFinally(Variable v) {
     ASTNode$State state = state();
     try {  return getFinally().isDUafter(v);  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect DU
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:917
    */
-  public boolean isDAafterFinally(Variable v) {
+  @Override
+public boolean isDAafterFinally(Variable v) {
     ASTNode$State state = state();
     try {  return getFinally().isDAafter(v);  }
     finally {
     }
   }
-  protected java.util.Map isDUbefore_Variable_values;
-  /**
+/**
    * @attribute syn
    * @aspect DU
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:1185
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean isDUbefore(Variable v) {
     Object _parameters = v;
-    if(isDUbefore_Variable_values == null) isDUbefore_Variable_values = new java.util.HashMap(4);
+    if(isDUbefore_Variable_values == null) {
+		isDUbefore_Variable_values = new java.util.HashMap(4);
+	}
     ASTNode$State.CircularValue _value;
     if(isDUbefore_Variable_values.containsKey(_parameters)) {
       Object _o = isDUbefore_Variable_values.get(_parameters);
       if(!(_o instanceof ASTNode$State.CircularValue)) {
         return ((Boolean)_o).booleanValue();
-      }
-      else
-        _value = (ASTNode$State.CircularValue)_o;
+      } else {
+		_value = (ASTNode$State.CircularValue)_o;
+	}
     }
     else {
       _value = new ASTNode$State.CircularValue();
@@ -856,7 +1012,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       boolean isFinal = this.is$Final();
       boolean new_isDUbefore_Variable_value;
       do {
-        _value.visited = new Integer(state.CIRCLE_INDEX);
+        _value.visited = Integer.valueOf(state.CIRCLE_INDEX);
         state.CHANGE = false;
         new_isDUbefore_Variable_value = isDUbefore_compute(v);
         if (new_isDUbefore_Variable_value!=((Boolean)_value.value).booleanValue()) {
@@ -877,34 +1033,36 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
       state.IN_CIRCLE = false; 
       return new_isDUbefore_Variable_value;
     }
-    if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
-      _value.visited = new Integer(state.CIRCLE_INDEX);
-      boolean new_isDUbefore_Variable_value = isDUbefore_compute(v);
-      if (state.RESET_CYCLE) {
+    if (Integer.valueOf(state.CIRCLE_INDEX).equals(_value.visited)) {
+		return ((Boolean)_value.value).booleanValue();
+	}
+	_value.visited = Integer.valueOf(state.CIRCLE_INDEX);
+	boolean new_isDUbefore_Variable_value = isDUbefore_compute(v);
+	if (state.RESET_CYCLE) {
         isDUbefore_Variable_values.remove(_parameters);
       }
       else if (new_isDUbefore_Variable_value!=((Boolean)_value.value).booleanValue()) {
         state.CHANGE = true;
         _value.value = new_isDUbefore_Variable_value;
       }
-      return new_isDUbefore_Variable_value;
-    }
-    return ((Boolean)_value.value).booleanValue();
+	return new_isDUbefore_Variable_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean isDUbefore_compute(Variable v) {  return super.isDUbefore(v);  }
-  protected java.util.Map isDUafter_Variable_values;
-  /**
+/**
    * @attribute syn
    * @aspect DU
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:1221
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean isDUafter(Variable v) {
     Object _parameters = v;
-    if(isDUafter_Variable_values == null) isDUafter_Variable_values = new java.util.HashMap(4);
+    if(isDUafter_Variable_values == null) {
+		isDUafter_Variable_values = new java.util.HashMap(4);
+	}
     if(isDUafter_Variable_values.containsKey(_parameters)) {
       return ((Boolean)isDUafter_Variable_values.get(_parameters)).booleanValue();
     }
@@ -912,27 +1070,30 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean isDUafter_Variable_value = isDUafter_compute(v);
-      if(isFinal && num == state().boundariesCrossed) isDUafter_Variable_values.put(_parameters, Boolean.valueOf(isDUafter_Variable_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		isDUafter_Variable_values.put(_parameters, Boolean.valueOf(isDUafter_Variable_value));
+	}
     return isDUafter_Variable_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean isDUafter_compute(Variable v) {
     // 16.2.14 4th bullet
-    if(!hasFinally()) {
-      if(!getBlock().isDUafter(v))
-        return false;
-      for(int i = 0; i < getNumCatchClause(); i++)
-        if(!getCatchClause(i).getBlock().isDUafter(v))
-          return false;
-      return true;
-    }
-    else
-      return getFinally().isDUafter(v);
+	if (hasFinally()) {
+		return getFinally().isDUafter(v);
+	}
+	if(!getBlock().isDUafter(v)) {
+		return false;
+	}
+	for(int i = 0; i < getNumCatchClause(); i++) {
+		if(!getCatchClause(i).getBlock().isDUafter(v)) {
+			return false;
+		}
+	}
+	return true;
   }
-  protected java.util.Map catchableException_TypeDecl_values;
-  /**
+/**
    * The block of the try statement can throw an exception of
    * a type assignable to the given type.
    * @attribute syn
@@ -942,7 +1103,9 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   @SuppressWarnings({"unchecked", "cast"})
   public boolean catchableException(TypeDecl type) {
     Object _parameters = type;
-    if(catchableException_TypeDecl_values == null) catchableException_TypeDecl_values = new java.util.HashMap(4);
+    if(catchableException_TypeDecl_values == null) {
+		catchableException_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(catchableException_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)catchableException_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -950,27 +1113,22 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean catchableException_TypeDecl_value = catchableException_compute(type);
-      if(isFinal && num == state().boundariesCrossed) catchableException_TypeDecl_values.put(_parameters, Boolean.valueOf(catchableException_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		catchableException_TypeDecl_values.put(_parameters, Boolean.valueOf(catchableException_TypeDecl_value));
+	}
     return catchableException_TypeDecl_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean catchableException_compute(TypeDecl type) {  return getBlock().reachedException(type);  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean canCompleteNormally_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected boolean canCompleteNormally_value;
-  /**
+/**
    * @attribute syn
    * @aspect UnreachableStatements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:113
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public boolean canCompleteNormally() {
     if(canCompleteNormally_computed) {
       return canCompleteNormally_value;
@@ -979,50 +1137,47 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     canCompleteNormally_value = canCompleteNormally_compute();
-      if(isFinal && num == state().boundariesCrossed) canCompleteNormally_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		canCompleteNormally_computed = true;
+	}
     return canCompleteNormally_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private boolean canCompleteNormally_compute() {
      boolean anyCatchClauseCompleteNormally = false;
-     for(int i = 0; i < getNumCatchClause() && !anyCatchClauseCompleteNormally; i++)
-       anyCatchClauseCompleteNormally = getCatchClause(i).getBlock().canCompleteNormally();
+     for(int i = 0; i < getNumCatchClause() && !anyCatchClauseCompleteNormally; i++) {
+		anyCatchClauseCompleteNormally = getCatchClause(i).getBlock().canCompleteNormally();
+	}
      return (getBlock().canCompleteNormally() || anyCatchClauseCompleteNormally) &&
        (!hasFinally() || getFinally().canCompleteNormally());
   }
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:200
    */
-  public soot.jimple.Stmt break_label() {
+  @Override
+public soot.jimple.Stmt break_label() {
     ASTNode$State state = state();
     try {  return label_finally();  }
     finally {
     }
   }
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:225
    */
-  public soot.jimple.Stmt continue_label() {
+  @Override
+public soot.jimple.Stmt continue_label() {
     ASTNode$State state = state();
     try {  return label_finally();  }
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_begin_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_begin_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:339
@@ -1036,22 +1191,16 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_begin_value = label_begin_compute();
-      if(isFinal && num == state().boundariesCrossed) label_begin_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_begin_computed = true;
+	}
     return label_begin_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_begin_compute() {  return newLabel();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_block_end_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_block_end_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:340
@@ -1065,22 +1214,16 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_block_end_value = label_block_end_compute();
-      if(isFinal && num == state().boundariesCrossed) label_block_end_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_block_end_computed = true;
+	}
     return label_block_end_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_block_end_compute() {  return newLabel();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_end_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_end_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:341
@@ -1094,22 +1237,16 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_end_value = label_end_compute();
-      if(isFinal && num == state().boundariesCrossed) label_end_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_end_computed = true;
+	}
     return label_end_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_end_compute() {  return newLabel();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_finally_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_finally_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:342
@@ -1123,27 +1260,22 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_finally_value = label_finally_compute();
-      if(isFinal && num == state().boundariesCrossed) label_finally_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_finally_computed = true;
+	}
     return label_finally_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_finally_compute() {  return newLabel();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_finally_block_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_finally_block_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:343
    */
-  @SuppressWarnings({"unchecked", "cast"})
+  @Override
+@SuppressWarnings({"unchecked", "cast"})
   public soot.jimple.Stmt label_finally_block() {
     if(label_finally_block_computed) {
       return label_finally_block_value;
@@ -1152,22 +1284,16 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_finally_block_value = label_finally_block_compute();
-      if(isFinal && num == state().boundariesCrossed) label_finally_block_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_finally_block_computed = true;
+	}
     return label_finally_block_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_finally_block_compute() {  return newLabel();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_exception_handler_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_exception_handler_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:344
@@ -1181,22 +1307,16 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_exception_handler_value = label_exception_handler_compute();
-      if(isFinal && num == state().boundariesCrossed) label_exception_handler_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_exception_handler_computed = true;
+	}
     return label_exception_handler_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_exception_handler_compute() {  return newLabel();  }
-  /**
-   * @apilevel internal
-   */
-  protected boolean label_catch_end_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected soot.jimple.Stmt label_catch_end_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:345
@@ -1210,14 +1330,16 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     label_catch_end_value = label_catch_end_compute();
-      if(isFinal && num == state().boundariesCrossed) label_catch_end_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		label_catch_end_computed = true;
+	}
     return label_catch_end_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private soot.jimple.Stmt label_catch_end_compute() {  return newLabel();  }
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:347
@@ -1228,15 +1350,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     finally {
     }
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean exceptionRanges_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected ArrayList exceptionRanges_value;
-  /**
+/**
    * @attribute syn
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:466
@@ -1250,33 +1364,38 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     exceptionRanges_value = exceptionRanges_compute();
-      if(isFinal && num == state().boundariesCrossed) exceptionRanges_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		exceptionRanges_computed = true;
+	}
     return exceptionRanges_value;
   }
-  /**
+/**
    * @apilevel internal
    */
   private ArrayList exceptionRanges_compute() {  return new ArrayList();  }
-  /**
+/**
    * @attribute syn
    * @aspect PreciseRethrow
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java7Frontend/PreciseRethrow.jrag:55
    */
-  public boolean modifiedInScope(Variable var) {
+  @Override
+public boolean modifiedInScope(Variable var) {
     ASTNode$State state = state();
     try {
-		if (getBlock().modifiedInScope(var))
+		if (getBlock().modifiedInScope(var)) {
 			return true;
-		for (CatchClause cc : getCatchClauseList())
-			if (cc.modifiedInScope(var))
+		}
+		for (CatchClause cc : getCatchClauseList()) {
+			if (cc.modifiedInScope(var)) {
 				return true;
+			}
+		}
 		return hasFinally() && getFinally().modifiedInScope(var);
 	}
     finally {
     }
   }
-  protected java.util.Map handlesException_TypeDecl_values;
-  /**
+/**
    * @attribute inh
    * @aspect ExceptionHandling
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:49
@@ -1284,7 +1403,9 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   @SuppressWarnings({"unchecked", "cast"})
   public boolean handlesException(TypeDecl exceptionType) {
     Object _parameters = exceptionType;
-    if(handlesException_TypeDecl_values == null) handlesException_TypeDecl_values = new java.util.HashMap(4);
+    if(handlesException_TypeDecl_values == null) {
+		handlesException_TypeDecl_values = new java.util.HashMap(4);
+	}
     if(handlesException_TypeDecl_values.containsKey(_parameters)) {
       return ((Boolean)handlesException_TypeDecl_values.get(_parameters)).booleanValue();
     }
@@ -1292,18 +1413,12 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     boolean handlesException_TypeDecl_value = getParent().Define_boolean_handlesException(this, null, exceptionType);
-      if(isFinal && num == state().boundariesCrossed) handlesException_TypeDecl_values.put(_parameters, Boolean.valueOf(handlesException_TypeDecl_value));
+      if(isFinal && num == state().boundariesCrossed) {
+		handlesException_TypeDecl_values.put(_parameters, Boolean.valueOf(handlesException_TypeDecl_value));
+	}
     return handlesException_TypeDecl_value;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean typeError_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl typeError_value;
-  /**
+/**
    * @attribute inh
    * @aspect UnreachableStatements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:138
@@ -1317,18 +1432,12 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     typeError_value = getParent().Define_TypeDecl_typeError(this, null);
-      if(isFinal && num == state().boundariesCrossed) typeError_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		typeError_computed = true;
+	}
     return typeError_value;
   }
-  /**
-   * @apilevel internal
-   */
-  protected boolean typeRuntimeException_computed = false;
-  /**
-   * @apilevel internal
-   */
-  protected TypeDecl typeRuntimeException_value;
-  /**
+/**
    * @attribute inh
    * @aspect UnreachableStatements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:139
@@ -1342,10 +1451,12 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
   int num = state.boundariesCrossed;
   boolean isFinal = this.is$Final();
     typeRuntimeException_value = getParent().Define_TypeDecl_typeRuntimeException(this, null);
-      if(isFinal && num == state().boundariesCrossed) typeRuntimeException_computed = true;
+      if(isFinal && num == state().boundariesCrossed) {
+		typeRuntimeException_computed = true;
+	}
     return typeRuntimeException_value;
   }
-  /**
+/**
    * @attribute inh
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:348
@@ -1356,7 +1467,7 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     boolean enclosedByExceptionHandler_value = getParent().Define_boolean_enclosedByExceptionHandler(this, null);
     return enclosedByExceptionHandler_value;
   }
-  /**
+/**
    * @attribute inh
    * @aspect Statements
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:479
@@ -1367,11 +1478,12 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     TypeDecl typeThrowable_value = getParent().Define_TypeDecl_typeThrowable(this, null);
     return typeThrowable_value;
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:665
    * @apilevel internal
    */
-  public boolean Define_boolean_isDAbefore(ASTNode caller, ASTNode child, Variable v) {
+  @Override
+public boolean Define_boolean_isDAbefore(ASTNode caller, ASTNode child, Variable v) {
     if(caller == getFinallyOptNoTransform()) {
       return isDAbefore(v);
     }
@@ -1385,26 +1497,32 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     else {      return getParent().Define_boolean_isDAbefore(this, caller, v);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/DefiniteAssignment.jrag:1212
    * @apilevel internal
    */
-  public boolean Define_boolean_isDUbefore(ASTNode caller, ASTNode child, Variable v) {
+  @Override
+public boolean Define_boolean_isDUbefore(ASTNode caller, ASTNode child, Variable v) {
     if(caller == getFinallyOptNoTransform()){
-    if(!getBlock().isDUeverywhere(v))
-      return false;
-    for(int i = 0; i < getNumCatchClause(); i++)
-      if(!getCatchClause(i).getBlock().unassignedEverywhere(v, this))
-        return false;
+    if(!getBlock().isDUeverywhere(v)) {
+		return false;
+	}
+    for(int i = 0; i < getNumCatchClause(); i++) {
+		if(!getCatchClause(i).getBlock().unassignedEverywhere(v, this)) {
+			return false;
+		}
+	}
     return true;
   }
     else if(caller == getCatchClauseListNoTransform())  { 
     int childIndex = caller.getIndexOfChild(child);
     {
-    if(!getBlock().isDUafter(v))
-      return false;
-    if(!getBlock().isDUeverywhere(v))
-      return false;
+    if(!getBlock().isDUafter(v)) {
+		return false;
+	}
+    if(!getBlock().isDUeverywhere(v)) {
+		return false;
+	}
     return true;
   }
   }
@@ -1414,35 +1532,41 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     else {      return getParent().Define_boolean_isDUbefore(this, caller, v);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/ExceptionHandling.jrag:202
    * @apilevel internal
    */
-  public boolean Define_boolean_handlesException(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
+  @Override
+public boolean Define_boolean_handlesException(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
     if(caller == getBlockNoTransform()){
-    for(int i = 0; i < getNumCatchClause(); i++)
-      if(getCatchClause(i).handles(exceptionType))
-        return true;
-    if(hasFinally() && !getFinally().canCompleteNormally())
-      return true;
+    for(int i = 0; i < getNumCatchClause(); i++) {
+		if(getCatchClause(i).handles(exceptionType)) {
+			return true;
+		}
+	}
+    if(hasFinally() && !getFinally().canCompleteNormally()) {
+		return true;
+	}
     return handlesException(exceptionType);
   }
     else if(caller == getCatchClauseListNoTransform())  { 
     int childIndex = caller.getIndexOfChild(child);
     {
-    if(hasFinally() && !getFinally().canCompleteNormally())
-      return true;
+    if(hasFinally() && !getFinally().canCompleteNormally()) {
+		return true;
+	}
     return handlesException(exceptionType);
   }
   }
     else {      return getParent().Define_boolean_handlesException(this, caller, exceptionType);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:121
    * @apilevel internal
    */
-  public boolean Define_boolean_reachable(ASTNode caller, ASTNode child) {
+  @Override
+public boolean Define_boolean_reachable(ASTNode caller, ASTNode child) {
     if(caller == getFinallyOptNoTransform()) {
       return reachable();
     }
@@ -1452,32 +1576,38 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     else {      return getParent().Define_boolean_reachable(this, caller);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:128
    * @apilevel internal
    */
-  public boolean Define_boolean_reachableCatchClause(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
+  @Override
+public boolean Define_boolean_reachableCatchClause(ASTNode caller, ASTNode child, TypeDecl exceptionType) {
     if(caller == getCatchClauseListNoTransform())  { 
     int childIndex = caller.getIndexOfChild(child);
     {
-    for(int i = 0; i < childIndex; i++)
-      if(getCatchClause(i).handles(exceptionType))
-        return false;
-    if(catchableException(exceptionType))
-      return true;
-    if(exceptionType.mayCatch(typeError()) || exceptionType.mayCatch(typeRuntimeException()))
-      return true;
+    for(int i = 0; i < childIndex; i++) {
+		if(getCatchClause(i).handles(exceptionType)) {
+			return false;
+		}
+	}
+    if(catchableException(exceptionType)) {
+		return true;
+	}
+    if(exceptionType.mayCatch(typeError()) || exceptionType.mayCatch(typeRuntimeException())) {
+		return true;
+	}
     return false;
   }
   }
     else {      return getParent().Define_boolean_reachableCatchClause(this, caller, exceptionType);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java1.4Frontend/UnreachableStatements.jrag:156
    * @apilevel internal
    */
-  public boolean Define_boolean_reportUnreachable(ASTNode caller, ASTNode child) {
+  @Override
+public boolean Define_boolean_reportUnreachable(ASTNode caller, ASTNode child) {
     if(caller == getFinallyOptNoTransform()) {
       return reachable();
     }
@@ -1491,22 +1621,24 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     else {      return getParent().Define_boolean_reportUnreachable(this, caller);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:353
    * @apilevel internal
    */
-  public boolean Define_boolean_enclosedByExceptionHandler(ASTNode caller, ASTNode child) {
+  @Override
+public boolean Define_boolean_enclosedByExceptionHandler(ASTNode caller, ASTNode child) {
     if(caller == getBlockNoTransform()) {
       return true;
     }
     else {      return getParent().Define_boolean_enclosedByExceptionHandler(this, caller);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddExtensions/JimpleBackend/Statements.jrag:462
    * @apilevel internal
    */
-  public ArrayList Define_ArrayList_exceptionRanges(ASTNode caller, ASTNode child) {
+  @Override
+public ArrayList Define_ArrayList_exceptionRanges(ASTNode caller, ASTNode child) {
     if(caller == getCatchClauseListNoTransform())  {
     int childIndex = caller.getIndexOfChild(child);
     return exceptionRanges();
@@ -1517,23 +1649,23 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     else {      return getParent().Define_ArrayList_exceptionRanges(this, caller);
     }
   }
-  /**
+/**
    * @declaredat /Users/eric/Documents/workspaces/clara-soot/JastAddJ/Java7Frontend/PreciseRethrow.jrag:138
    * @apilevel internal
    */
-  public Collection<TypeDecl> Define_Collection_TypeDecl__caughtExceptions(ASTNode caller, ASTNode child) {
+  @Override
+public Collection<TypeDecl> Define_Collection_TypeDecl__caughtExceptions(ASTNode caller, ASTNode child) {
     if(caller == getCatchClauseListNoTransform())  { 
     int index = caller.getIndexOfChild(child);
     {
-		Collection<TypeDecl> excp = new HashSet<TypeDecl>();
+		Collection<TypeDecl> excp = new HashSet<>();
 		getBlock().collectExceptions(excp, this);
-		Collection<TypeDecl> caught = new LinkedList<TypeDecl>();
-		Iterator<TypeDecl> iter = excp.iterator();
-		while (iter.hasNext()) {
-			TypeDecl exception = iter.next();
+		Collection<TypeDecl> caught = new LinkedList<>();
+		for (TypeDecl exception : excp) {
 			// this catch clause handles the exception
-			if (!getCatchClause(index).handles(exception))
+			if (!getCatchClause(index).handles(exception)) {
 				continue;
+			}
 			// no previous catch clause handles the exception
 			boolean already = false;
 			for (int i = 0; i < index; ++i) {
@@ -1552,10 +1684,11 @@ public class TryStmt extends Stmt implements Cloneable, FinallyHost {
     else {      return getParent().Define_Collection_TypeDecl__caughtExceptions(this, caller);
     }
   }
-  /**
+/**
    * @apilevel internal
    */
-  public ASTNode rewriteTo() {
+  @Override
+public ASTNode rewriteTo() {
     return super.rewriteTo();
   }
 }
