@@ -51,7 +51,8 @@ public class ExceptionFinder implements FactFinder {
     return G.v().soot_dava_toolkits_base_finders_ExceptionFinder();
   }
 
-  public void find(DavaBody body, AugmentedStmtGraph asg, SETNode SET) throws RetriggerAnalysisException {
+  @Override
+public void find(DavaBody body, AugmentedStmtGraph asg, SETNode SET) throws RetriggerAnalysisException {
     Dava.v().log("ExceptionFinder::find()");
 
     for (ExceptionNode en : body.get_ExceptionFacts()) {
@@ -59,11 +60,9 @@ public class ExceptionFinder implements FactFinder {
         continue;
       }
 
-      IterableSet<AugmentedStmt> fullBody = new IterableSet<AugmentedStmt>();
+      IterableSet<AugmentedStmt> fullBody = new IterableSet<>();
 
-      for (IterableSet<AugmentedStmt> is : en.get_CatchList()) {
-        fullBody.addAll(is);
-      }
+      en.get_CatchList().forEach(fullBody::addAll);
 
       fullBody.addAll(en.get_TryBody());
 
@@ -76,16 +75,16 @@ public class ExceptionFinder implements FactFinder {
   public void preprocess(DavaBody body, AugmentedStmtGraph asg) {
     Dava.v().log("ExceptionFinder::preprocess()");
 
-    IterableSet<ExceptionNode> enlist = new IterableSet<ExceptionNode>();
+    IterableSet<ExceptionNode> enlist = new IterableSet<>();
 
     // Find the first approximation for all the try catch bodies.
     {
-      for (Trap trap : body.getTraps()) {
+      body.getTraps().forEach(trap -> {
         Unit endUnit = trap.getEndUnit();
 
         // get the body of the try block as a raw read of the area of
         // protection
-        IterableSet<AugmentedStmt> tryBody = new IterableSet<AugmentedStmt>();
+        IterableSet<AugmentedStmt> tryBody = new IterableSet<>();
 
         Iterator<Unit> btit = body.getUnits().iterator(trap.getBeginUnit());
         for (Unit u = (Unit) btit.next(); u != endUnit; u = (Unit) btit.next()) {
@@ -93,7 +92,7 @@ public class ExceptionFinder implements FactFinder {
         }
 
         enlist.add(new ExceptionNode(tryBody, trap.getException(), asg.get_AugStmt((Stmt) trap.getHandlerUnit())));
-      }
+      });
     }
 
     // Add in gotos that may escape the try body (created by the indirection
@@ -128,9 +127,7 @@ public class ExceptionFinder implements FactFinder {
     splitLoop: while (true) {
       // refresh the catch bodies
       {
-        for (ExceptionNode enode : enlist) {
-          enode.refresh_CatchBody(this);
-        }
+        enlist.forEach(enode -> enode.refresh_CatchBody(this));
       }
 
       // split for inter-exception nesting problems
@@ -146,7 +143,8 @@ public class ExceptionFinder implements FactFinder {
           for (int j = i + 1; j < ena.length; j++) {
             ExceptionNode enj = ena[j];
 
-            IterableSet<AugmentedStmt> eniTryBody = eni.get_TryBody(), enjTryBody = enj.get_TryBody();
+            IterableSet<AugmentedStmt> eniTryBody = eni.get_TryBody();
+			IterableSet<AugmentedStmt> enjTryBody = enj.get_TryBody();
 
             if ((eniTryBody.equals(enjTryBody) == false) && (eniTryBody.intersects(enjTryBody))) {
 
@@ -173,7 +171,7 @@ public class ExceptionFinder implements FactFinder {
         for (ExceptionNode en : enlist) {
           // Get the try block entry points
           IterableSet<AugmentedStmt> tryBody = en.get_TryBody();
-          LinkedList<AugmentedStmt> heads = new LinkedList<AugmentedStmt>();
+          LinkedList<AugmentedStmt> heads = new LinkedList<>();
           for (AugmentedStmt as : tryBody) {
             if (as.cpreds.isEmpty()) {
               heads.add(as);
@@ -188,14 +186,14 @@ public class ExceptionFinder implements FactFinder {
             }
           }
 
-          HashSet<AugmentedStmt> touchSet = new HashSet<AugmentedStmt>();
+          HashSet<AugmentedStmt> touchSet = new HashSet<>();
           touchSet.addAll(heads);
 
           // Break up the try block for all the so-far detectable
           // parts.
           AugmentedStmt head = heads.removeFirst();
-          IterableSet<AugmentedStmt> subTryBlock = new IterableSet<AugmentedStmt>();
-          LinkedList<AugmentedStmt> worklist = new LinkedList<AugmentedStmt>();
+          IterableSet<AugmentedStmt> subTryBlock = new IterableSet<>();
+          LinkedList<AugmentedStmt> worklist = new LinkedList<>();
 
           worklist.add(head);
 
@@ -230,10 +228,10 @@ public class ExceptionFinder implements FactFinder {
 
     // Aggregate the try blocks.
     {
-      LinkedList<ExceptionNode> reps = new LinkedList<ExceptionNode>();
+      LinkedList<ExceptionNode> reps = new LinkedList<>();
       HashMap<Serializable, LinkedList<IterableSet<AugmentedStmt>>> hCode2bucket
-          = new HashMap<Serializable, LinkedList<IterableSet<AugmentedStmt>>>();
-      HashMap<Serializable, ExceptionNode> tryBody2exceptionNode = new HashMap<Serializable, ExceptionNode>();
+          = new HashMap<>();
+      HashMap<Serializable, ExceptionNode> tryBody2exceptionNode = new HashMap<>();
 
       for (ExceptionNode en : enlist) {
         int hashCode = 0;
@@ -242,22 +240,15 @@ public class ExceptionFinder implements FactFinder {
         for (AugmentedStmt au : curTryBody) {
           hashCode ^= au.hashCode();
         }
-        Integer I = new Integer(hashCode);
+        Integer I = Integer.valueOf(hashCode);
 
         LinkedList<IterableSet<AugmentedStmt>> bucket = hCode2bucket.get(I);
         if (bucket == null) {
-          bucket = new LinkedList<IterableSet<AugmentedStmt>>();
+          bucket = new LinkedList<>();
           hCode2bucket.put(I, bucket);
         }
 
-        ExceptionNode repExceptionNode = null;
-
-        for (IterableSet<AugmentedStmt> bucketTryBody : bucket) {
-          if (bucketTryBody.equals(curTryBody)) {
-            repExceptionNode = tryBody2exceptionNode.get(bucketTryBody);
-            break;
-          }
-        }
+        ExceptionNode repExceptionNode = bucket.stream().filter(bucketTryBody -> bucketTryBody.equals(curTryBody)).findFirst().map(tryBody2exceptionNode::get).orElse(null);
 
         if (repExceptionNode == null) {
           tryBody2exceptionNode.put(curTryBody, en);
@@ -278,8 +269,8 @@ public class ExceptionFinder implements FactFinder {
   }
 
   public IterableSet<AugmentedStmt> get_CatchBody(AugmentedStmt handlerAugmentedStmt) {
-    IterableSet<AugmentedStmt> catchBody = new IterableSet<AugmentedStmt>();
-    LinkedList<AugmentedStmt> catchQueue = new LinkedList<AugmentedStmt>();
+    IterableSet<AugmentedStmt> catchBody = new IterableSet<>();
+    LinkedList<AugmentedStmt> catchQueue = new LinkedList<>();
 
     catchBody.add(handlerAugmentedStmt);
     catchQueue.addAll(handlerAugmentedStmt.csuccs);
