@@ -50,10 +50,14 @@ import org.xml.sax.SAXException;
 import org.xml.sax.SAXParseException;
 
 import soot.CompilationDeathException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class ProcessData {
 
-  // when printing class names what is the max size of each class name
+  private static final Logger logger = LoggerFactory.getLogger(ProcessData.class);
+
+// when printing class names what is the max size of each class name
   private static final int CLASSNAMESIZE = 15;
 
   private static final int CLASS = 0;
@@ -61,7 +65,7 @@ public class ProcessData {
 
   private static String metricListFileName = null;
 
-  private static final ArrayList<String> xmlFileList = new ArrayList<String>();
+  private static final ArrayList<String> xmlFileList = new ArrayList<>();
 
   private static int aggregationMechanism = -1;
 
@@ -83,38 +87,37 @@ public class ProcessData {
       System.exit(1);
     }
 
-    if (args[0].equals("--help")) {
+    if ("--help".equals(args[0])) {
       printHelp();
       System.exit(1);
-    } else if (args[0].equals("-metricList")) {
+    } else if ("-metricList".equals(args[0])) {
       metricListFileName(args);
-      System.out.println("A list of metrics will be stored in: " + metricListFileName);
+      logger.info("A list of metrics will be stored in: " + metricListFileName);
 
       readXMLFileNames(2, args);
 
-      try {
-        OutputStream streamOut = new FileOutputStream(metricListFileName);
+      try (OutputStream streamOut = new FileOutputStream(metricListFileName)) {
         PrintWriter writerOut = new PrintWriter(new OutputStreamWriter(streamOut));
         writeMetricLists(writerOut);
 
         writerOut.flush();
-        streamOut.close();
       } catch (IOException e) {
-        throw new CompilationDeathException("Cannot output file " + metricListFileName);
+        logger.error(e.getMessage(), e);
+		throw new CompilationDeathException("Cannot output file " + metricListFileName);
       }
 
-    } else if (args[0].equals("-tables")) {
+    } else if ("-tables".equals(args[0])) {
       metricListFileName(args);
-      System.out.println("Will read column table headings from: " + metricListFileName);
+      logger.info("Will read column table headings from: " + metricListFileName);
 
       // read aggregation option
       aggregationOption(args);
       if (aggregationMechanism == ProcessData.BENCHMARK) {
-        System.out.println("Aggregating over benchmarks...each row is one of the xml files");
-        System.out.println("Only one tex file with the name" + metricListFileName + ".tex will be created");
+        logger.info("Aggregating over benchmarks...each row is one of the xml files");
+        logger.info(new StringBuilder().append("Only one tex file with the name").append(metricListFileName).append(".tex will be created").toString());
       } else if (aggregationMechanism == ProcessData.CLASS) {
-        System.out.println("Aggregating over class...each row is one class...");
-        System.out.println("Each benchmark (xml file) will have its own tex file");
+        logger.info("Aggregating over class...each row is one class...");
+        logger.info("Each benchmark (xml file) will have its own tex file");
       }
 
       readXMLFileNames(3, args);
@@ -122,7 +125,7 @@ public class ProcessData {
       // TODO: hello
       generateMetricsTables();
     } else {
-      System.out.println("Incorrect argument number 1: expecting -metricList or -tables");
+      logger.info("Incorrect argument number 1: expecting -metricList or -tables");
       System.exit(1);
     }
 
@@ -133,15 +136,15 @@ public class ProcessData {
    */
   private static void aggregationOption(String[] args) {
     if (args.length < 3) {
-      System.out.println("Expecting -class or -benchmark at argument number 3");
+      logger.info("Expecting -class or -benchmark at argument number 3");
       System.exit(1);
     }
-    if (args[2].equals("-class")) {
+    if ("-class".equals(args[2])) {
       aggregationMechanism = ProcessData.CLASS;
-    } else if (args[2].equals("-benchmark")) {
+    } else if ("-benchmark".equals(args[2])) {
       aggregationMechanism = ProcessData.BENCHMARK;
     } else {
-      System.out.println("Expecting -class or -benchmark at argument number 3");
+      logger.info("Expecting -class or -benchmark at argument number 3");
       System.exit(1);
     }
   }
@@ -153,13 +156,13 @@ public class ProcessData {
    */
   private static void readXMLFileNames(int startIndex, String args[]) {
     if (args.length < startIndex + 1) {
-      System.out.println("Expecting an xml file OR * symbol as argument number" + (startIndex + 1));
+      logger.info("Expecting an xml file OR * symbol as argument number" + (startIndex + 1));
       System.exit(1);
     }
 
     // check if its a *
-    if (args[startIndex].equals("*")) {
-      System.out.println("Will read all xml files from directory");
+    if ("*".equals(args[startIndex])) {
+      logger.info("Will read all xml files from directory");
 
       // READ DIRECTORY STRUCTURE
       readStar();
@@ -175,10 +178,7 @@ public class ProcessData {
       }
     }
 
-    Iterator<String> it = xmlFileList.iterator();
-    while (it.hasNext()) {
-      System.out.println("Will be reading: " + it.next());
-    }
+    xmlFileList.forEach(aXmlFileList -> logger.info("Will be reading: " + aXmlFileList));
   }
 
   /*
@@ -186,7 +186,7 @@ public class ProcessData {
    */
   private static void metricListFileName(String[] args) {
     if (args.length < 2) {
-      System.out.println("Expecting name of metricList as argumnet number 2");
+      logger.info("Expecting name of metricList as argumnet number 2");
       System.exit(1);
     }
     metricListFileName = args[1];
@@ -195,36 +195,36 @@ public class ProcessData {
 
   public static void printHelp() {
     printIntro();
-    System.out.println("There are two main modes of execution");
-    System.out.println("To execute the program the first argument should be one of these modes");
-    System.out.println("-metricList and -tables");
-    System.out.println("\n\n The -metricList mode");
-    System.out.println("The argument at location 1 should be name of a file where the list of metrics will be stored");
-    System.out.println("All arguments following argument 1 have to be xml files to be processed");
-    System.out.println(
+    logger.info("There are two main modes of execution");
+    logger.info("To execute the program the first argument should be one of these modes");
+    logger.info("-metricList and -tables");
+    logger.info("\n\n The -metricList mode");
+    logger.info("The argument at location 1 should be name of a file where the list of metrics will be stored");
+    logger.info("All arguments following argument 1 have to be xml files to be processed");
+    logger.info(
         "If argument at location 2 is * then the current directory is searched and all xml files will be processed");
 
-    System.out.println("\n\n The -tables mode");
-    System.out.println("The argument at location 1 should be name of a file where the list of metrics are stored");
-    System.out.println("These metrics will become the COLUMNS in the tables created");
-    System.out.println("Argument at location 2 is the choice of aggregation");
-    System.out.println("\t -class for class level metrics");
-    System.out.println("\t -benchmark for benchmark level metrics");
-    System.out.println("Each xml file is considered to be a benchmark with a bunch of classes in it");
+    logger.info("\n\n The -tables mode");
+    logger.info("The argument at location 1 should be name of a file where the list of metrics are stored");
+    logger.info("These metrics will become the COLUMNS in the tables created");
+    logger.info("Argument at location 2 is the choice of aggregation");
+    logger.info("\t -class for class level metrics");
+    logger.info("\t -benchmark for benchmark level metrics");
+    logger.info("Each xml file is considered to be a benchmark with a bunch of classes in it");
 
-    System.out.println("All arguments following argument 2 have to be xml files to be processed");
-    System.out.println(
+    logger.info("All arguments following argument 2 have to be xml files to be processed");
+    logger.info(
         "If argument at location 3 is * then the current directory is searched and all xml files will be processed");
   }
 
   public static void printIntro() {
-    System.out.println("Welcome to the processData application");
-    System.out.println("The application is an xml document parser.");
-    System.out.println("Its primary aim is to create pretty tex tables");
+    logger.info("Welcome to the processData application");
+    logger.info("The application is an xml document parser.");
+    logger.info("Its primary aim is to create pretty tex tables");
   }
 
   public static void useHelp() {
-    System.out.println("Use the --help flag for more details");
+    logger.info("Use the --help flag for more details");
   }
 
   /*
@@ -232,7 +232,7 @@ public class ProcessData {
    */
   private static void readStar() {
     String curDir = System.getProperty("user.dir");
-    System.out.println("Current system directory is" + curDir);
+    logger.info("Current system directory is" + curDir);
     File dir = new File(curDir);
 
     String[] children = dir.list();
@@ -240,11 +240,7 @@ public class ProcessData {
       // Either dir does not exist or is not a directory
     } else {
 
-      FilenameFilter filter = new FilenameFilter() {
-        public boolean accept(File dir, String name) {
-          return name.endsWith(".xml");
-        }
-      };
+      FilenameFilter filter = (File dir1, String name) -> name.endsWith(".xml");
       children = dir.list(filter);
 
       if (children != null) {
@@ -256,7 +252,7 @@ public class ProcessData {
   }
 
   private static void writeMetricLists(PrintWriter out) {
-    ArrayList<String> metricList = new ArrayList<String>();
+    ArrayList<String> metricList = new ArrayList<>();
 
     Iterator<String> it = xmlFileList.iterator();
     while (it.hasNext()) {
@@ -265,7 +261,7 @@ public class ProcessData {
         DocumentBuilderFactory docBuilderFactory = DocumentBuilderFactory.newInstance();
         DocumentBuilder docBuilder = docBuilderFactory.newDocumentBuilder();
         Document doc = docBuilder.parse(new File(fileName));
-        System.out.println("Retrieving Metric List from xml file: " + fileName);
+        logger.info("Retrieving Metric List from xml file: " + fileName);
         // normalize text representation
         doc.getDocumentElement().normalize();
 
@@ -288,8 +284,8 @@ public class ProcessData {
           } // end of if clause
         } // end of for loop with s var
       } catch (SAXParseException err) {
-        System.out.println("** Parsing error" + ", line " + err.getLineNumber() + ", uri " + err.getSystemId());
-        System.out.println(" " + err.getMessage());
+        logger.info(new StringBuilder().append("** Parsing error").append(", line ").append(err.getLineNumber()).append(", uri ").append(err.getSystemId()).toString(), err);
+        logger.info(" " + err.getMessage(), err);
       } catch (SAXException e) {
         Exception x = e.getException();
         ((x == null) ? e : x).printStackTrace();
@@ -302,13 +298,13 @@ public class ProcessData {
     while (it.hasNext()) {
       out.println(it.next());
     }
-    System.out.println(metricListFileName + " created.");
+    logger.info(metricListFileName + " created.");
   }
 
   @SuppressWarnings("fallthrough")
   private static void generateMetricsTables() {
 
-    Vector<String> columns = new Vector<String>();
+    Vector<String> columns = new Vector<>();
 
     /*
      * create the columns which are the metriclist
@@ -316,34 +312,28 @@ public class ProcessData {
     try {
       FileReader file = new FileReader(metricListFileName);
       BufferedReader fileInput = new BufferedReader(file);
-      String text;
-
-      // System.out.println("Columns");
-      while ((text = fileInput.readLine()) != null) {
-        // System.out.print(text+"\t");
-        columns.add(text);
-      }
+      // System.out.print(text+"\t");
+	// System.out.println("Columns");
+	fileInput.lines().forEach(columns::add);
       fileInput.close();
     } catch (Exception e) {
-      System.out.println("Exception while reading from metricList" + metricListFileName);
+      logger.error(e.getMessage(), e);
+	logger.info("Exception while reading from metricList" + metricListFileName);
       System.exit(1);
     }
 
-    Vector<String> allMetrics = new Vector<String>();
+    Vector<String> allMetrics = new Vector<>();
 
     try {
       FileReader file = new FileReader("myList");
       BufferedReader fileInput = new BufferedReader(file);
-      String text;
-
-      // System.out.println("Columns");
-      while ((text = fileInput.readLine()) != null) {
-        // System.out.print(text+"\t");
-        allMetrics.add(text);
-      }
+      // System.out.print(text+"\t");
+	// System.out.println("Columns");
+	fileInput.lines().forEach(allMetrics::add);
       fileInput.close();
     } catch (Exception e) {
-      System.out.println("Exception while reading from metricList" + metricListFileName);
+      logger.error(e.getMessage(), e);
+	logger.info("Exception while reading from metricList" + metricListFileName);
       System.exit(1);
     }
 
@@ -354,10 +344,10 @@ public class ProcessData {
       newClassName = metricListFileName;
       if (CSV) {
         newClassName += ".csv";
-        System.out.println("Creating csv file" + newClassName + " from metrics info");
+        logger.info(new StringBuilder().append("Creating csv file").append(newClassName).append(" from metrics info").toString());
       } else {
         newClassName += ".tex";
-        System.out.println("Creating tex file" + newClassName + " from metrics info");
+        logger.info(new StringBuilder().append("Creating tex file").append(newClassName).append(" from metrics info").toString());
       }
 
       bench = openWriteFile(newClassName);
@@ -366,12 +356,10 @@ public class ProcessData {
        * For benchmarks we want to print xml files dealing with same benchmark in one table hence fft-enabled.xml
        * fft-disabled.xml should be in one table where as matrix-enabled.xml matrix-disabled.xml should be in another table
        */
-      Map<String, List<String>> benchMarkToFiles = new HashMap<String, List<String>>();
-      Iterator<String> it = xmlFileList.iterator();
-      while (it.hasNext()) {
-        String fileName = it.next();
+      Map<String, List<String>> benchMarkToFiles = new HashMap<>();
+      for (String fileName : xmlFileList) {
         if (fileName.indexOf('-') < 0) {
-          System.out.println("XML files should have following syntax:\n "
+          logger.info("XML files should have following syntax:\n "
               + "<BENCHMARKNAME>-<PROPERTY>.xml\n PROPERTY should be enabled disabled etc");
           return;
         }
@@ -379,7 +367,7 @@ public class ProcessData {
         List<String> temp = benchMarkToFiles.get(benchmark);
         List<String> tempList = null;
         if (temp == null) {
-          tempList = new ArrayList<String>();
+          tempList = new ArrayList<>();
         } else {
           tempList = temp;
         }
@@ -391,15 +379,15 @@ public class ProcessData {
          */
         if (CSV) {
           if (fileName.indexOf('-') < 0 || fileName.lastIndexOf(".xml") < 0) {
-            System.out.println("XML files should have following syntax:\n <BENCHMARKNAME>-<PROPERTY>.xml\n "
+            logger.info("XML files should have following syntax:\n <BENCHMARKNAME>-<PROPERTY>.xml\n "
                 + "PROPERTY should be enabled disabled etc");
             return;
           }
           String xmlfileColumnType = fileName.substring(fileName.lastIndexOf('-') + 1, fileName.lastIndexOf(".xml"));
-          System.out.println("XML FILE COLUMN TYPE" + xmlfileColumnType);
-          if (xmlfileColumnType.equals("Jad") || xmlfileColumnType.equals("original")
-              || xmlfileColumnType.equals("SourceAgain") || xmlfileColumnType.equals("disabled")
-              || xmlfileColumnType.equals("enabled")) {
+          logger.info("XML FILE COLUMN TYPE" + xmlfileColumnType);
+          if ("Jad".equals(xmlfileColumnType) || "original".equals(xmlfileColumnType)
+              || "SourceAgain".equals(xmlfileColumnType) || "disabled".equals(xmlfileColumnType)
+              || "enabled".equals(xmlfileColumnType)) {
 
             // TODO will have to change this when dealin with obfuscator xml file names
           } else {
@@ -437,20 +425,18 @@ public class ProcessData {
           if (files.size() != 5) {
             throw new RuntimeException("not all xml files available for this benchmark!!");
           }
-          System.out.println("old order" + files.toString());
+          logger.info("old order" + files.toString());
           String[] newFileOrder = new String[files.size()];
-          Iterator<String> tempIt = files.iterator();
-          while (tempIt.hasNext()) {
-            String fileSort = tempIt.next();
-            if (fileSort.indexOf("Jad") > -1) {
+          for (String fileSort : files) {
+            if (fileSort.contains("Jad")) {
               newFileOrder[1] = fileSort;
-            } else if (fileSort.indexOf("original") > -1) {
+            } else if (fileSort.contains("original")) {
               newFileOrder[0] = fileSort;
-            } else if (fileSort.indexOf("SourceAgain") > -1) {
+            } else if (fileSort.contains("SourceAgain")) {
               newFileOrder[2] = fileSort;
-            } else if (fileSort.indexOf("disabled") > -1) {
+            } else if (fileSort.contains("disabled")) {
               newFileOrder[4] = fileSort;
-            } else if (fileSort.indexOf("enabled") > -1) {
+            } else if (fileSort.contains("enabled")) {
               newFileOrder[3] = fileSort;
             } else {
               throw new RuntimeException("property xml not correct");
@@ -458,13 +444,13 @@ public class ProcessData {
 
           }
 
-          files = new ArrayList<String>();
+          files = new ArrayList<>();
           files.add(newFileOrder[0]);
           files.add(newFileOrder[1]);
           files.add(newFileOrder[2]);
           files.add(newFileOrder[3]);
           files.add(newFileOrder[4]);
-          System.out.println("new order" + files.toString());
+          logger.info("new order" + files.toString());
         } else {
           // coming from obfuscator ordering is: original, jbco enabled, jbco disabled, klassmaster enabled,klassmaster
           // disabled,
@@ -472,47 +458,43 @@ public class ProcessData {
           if (files.size() != 5) {
             throw new RuntimeException("not all xml files available for this benchmark!!");
           }
-          System.out.println("old order" + files.toString());
+          logger.info("old order" + files.toString());
           String[] newFileOrder = new String[files.size()];
-          Iterator<String> tempIt = files.iterator();
-          while (tempIt.hasNext()) {
-            String fileSort = tempIt.next();
-            if (fileSort.indexOf("original") > -1) {
+          for (String fileSort : files) {
+            if (fileSort.contains("original")) {
               newFileOrder[0] = fileSort;
-            } else if (fileSort.indexOf("jbco-enabled") > -1) {
+            } else if (fileSort.contains("jbco-enabled")) {
               newFileOrder[1] = fileSort;
-            } else if (fileSort.indexOf("jbco-disabled") > -1) {
+            } else if (fileSort.contains("jbco-disabled")) {
               newFileOrder[2] = fileSort;
-            } else if (fileSort.indexOf("klassmaster-enabled") > -1) {
+            } else if (fileSort.contains("klassmaster-enabled")) {
               newFileOrder[3] = fileSort;
-            } else if (fileSort.indexOf("klassmaster-disabled") > -1) {
+            } else if (fileSort.contains("klassmaster-disabled")) {
               newFileOrder[4] = fileSort;
             } else {
               throw new RuntimeException("property xml not correct");
             }
           }
 
-          files = new ArrayList<String>();
+          files = new ArrayList<>();
           files.add(newFileOrder[0]);
           files.add(newFileOrder[1]);
           files.add(newFileOrder[2]);
           files.add(newFileOrder[3]);
           files.add(newFileOrder[4]);
-          System.out.println("new order" + files.toString());
+          logger.info("new order" + files.toString());
 
         }
 
-        Iterator<String> fileIt = files.iterator();
         int count = -1;
-        while (fileIt.hasNext()) {
-          String fileName = fileIt.next();
+        for (String fileName : files) {
           count++;
           try {
             DocumentBuilderFactory docBuilderFactory = DocumentBuilderFactory.newInstance();
 
             DocumentBuilder docBuilder = docBuilderFactory.newDocumentBuilder();
             Document doc = docBuilder.parse(new File(fileName));
-            System.out.println("Gethering metric info from from xml file: " + fileName);
+            logger.info("Gethering metric info from from xml file: " + fileName);
             // normalize text representation
 
             if (!CSV) {
@@ -524,13 +506,13 @@ public class ProcessData {
               }
             }
 
-            HashMap<String, Number> aggregatedValues = new HashMap<String, Number>();
+            HashMap<String, Number> aggregatedValues = new HashMap<>();
 
             // TODO Should compute all metrics always
             // only print out the one we want
             Iterator<String> tempIt = allMetrics.iterator();
             while (tempIt.hasNext()) {
-              aggregatedValues.put(tempIt.next(), new Integer(0));
+              aggregatedValues.put(tempIt.next(), Integer.valueOf(0));
             }
 
             int numClasses = aggregateXMLFileMetrics(doc, aggregatedValues);
@@ -540,14 +522,14 @@ public class ProcessData {
             // get the metrics we might need to divide
             Object myTemp = aggregatedValues.get("Total-Conditionals");
             if (myTemp == null) {
-              System.out.println("Total-Conditionals not found in aggregatedValues");
+              logger.info("Total-Conditionals not found in aggregatedValues");
               System.exit(1);
             }
             double total_if_ifelse = ((Integer) myTemp).doubleValue();
 
             myTemp = aggregatedValues.get("Total Loops");
             if (myTemp == null) {
-              System.out.println("Total Loops not found in aggregatedValues");
+              logger.info("Total Loops not found in aggregatedValues");
               System.exit(1);
             }
             double totalLoops = ((Integer) myTemp).doubleValue();
@@ -556,21 +538,21 @@ public class ProcessData {
 
             myTemp = aggregatedValues.get("AST-Node-Count");
             if (myTemp == null) {
-              System.out.println("AST-Node-Count not found in aggregatedValues");
+              logger.info("AST-Node-Count not found in aggregatedValues");
               System.exit(1);
             }
             double astCount = ((Integer) myTemp).doubleValue();
 
             myTemp = aggregatedValues.get("NameCount");
             if (myTemp == null) {
-              System.out.println("NameCount not found in aggregatedValues");
+              logger.info("NameCount not found in aggregatedValues");
               System.exit(1);
             }
             double nameCount = ((Double) myTemp).doubleValue();
 
             myTemp = aggregatedValues.get("Expr-Count");
             if (myTemp == null) {
-              System.out.println("ExprCount not found in aggregatedValues");
+              logger.info("ExprCount not found in aggregatedValues");
               System.exit(1);
             }
             double exprCount = ((Double) myTemp).doubleValue();
@@ -590,25 +572,25 @@ public class ProcessData {
                     case 2:
                     case 3:
                     case 4:
-                      if (nexttempit.equals("Total-Abrupt")) {
+                      if ("Total-Abrupt".equals(nexttempit)) {
                         // no averaging
                         bench.print("," + val);
-                      } else if (nexttempit.equals("Total-Cond-Complexity")) {
+                      } else if ("Total-Cond-Complexity".equals(nexttempit)) {
                         if (totalConditional != 0) {
                           // average by dividing total-cond-complexity for sum of if+ifelse+loops
-                          System.out.println("conditional complexit is" + val);
-                          System.out.println("totalConditionals are" + totalConditional);
+                          logger.info("conditional complexit is" + val);
+                          logger.info("totalConditionals are" + totalConditional);
 
                           bench.print("," + val / totalConditional);
                         } else if (val == 0) {
                           bench.print("," + val);
                         } else {
                           // val not 0 but toalconds are 0...not good
-                          System.out.println("Val not 0 but totalConditionals are zero!!!");
+                          logger.info("Val not 0 but totalConditionals are zero!!!");
                           System.exit(1);
                         }
 
-                      } else if (nexttempit.equals("D-W-Complexity")) {
+                      } else if ("D-W-Complexity".equals(nexttempit)) {
                         if (astCount != 0) {
                           // average by dividing D-W-Complexity by node count
                           bench.print("," + val / astCount);
@@ -616,11 +598,11 @@ public class ProcessData {
                           bench.print("," + val);
                         } else {
                           // val not 0 but astcount is 0...not good
-                          System.out.println("Val not 0 but astcount is zero!!!");
+                          logger.info("Val not 0 but astcount is zero!!!");
                           System.exit(1);
                         }
 
-                      } else if (nexttempit.equals("Expr-Complexity")) {
+                      } else if ("Expr-Complexity".equals(nexttempit)) {
 
                         if (exprCount != 0) {
                           // average by dividing expr-complexity for exprCount
@@ -629,11 +611,11 @@ public class ProcessData {
                           bench.print("," + val);
                         } else {
                           // val not 0 but expr-count are 0...not good
-                          System.out.println("Val not 0 but exprcount is zero!!!");
+                          logger.info("Val not 0 but exprcount is zero!!!");
                           System.exit(1);
                         }
 
-                      } else if (nexttempit.equals("Name-Complexity")) {
+                      } else if ("Name-Complexity".equals(nexttempit)) {
 
                         if (nameCount != 0) {
                           // average by dividing name-complexity for nameCount
@@ -642,7 +624,7 @@ public class ProcessData {
                           bench.print("," + val);
                         } else {
                           // val not 0 but name-count are 0...not good
-                          System.out.println("Val not 0 but name-count is zero!!!");
+                          logger.info("Val not 0 but name-count is zero!!!");
                           System.exit(1);
                         }
                       } else {
@@ -651,7 +633,7 @@ public class ProcessData {
                       }
                       break;
                     default:
-                      System.out.println("unhandled count value");
+                      logger.info("unhandled count value");
                       System.exit(1);
                   }
 
@@ -669,24 +651,24 @@ public class ProcessData {
                     case 2:
                     case 3:
                     case 4:
-                      if (nexttempit.equals("Total-Abrupt")) {
+                      if ("Total-Abrupt".equals(nexttempit)) {
                         // no averaging
                         bench.print("," + val);
-                      } else if (nexttempit.equals("Total-Cond-Complexity")) {
+                      } else if ("Total-Cond-Complexity".equals(nexttempit)) {
                         if (totalConditional != 0) {
                           // average by dividing total-cond-complexity for sum of if+ifelse+loops
-                          System.out.println("conditional complexit is" + val);
-                          System.out.println("totalConditionals are" + totalConditional);
+                          logger.info("conditional complexit is" + val);
+                          logger.info("totalConditionals are" + totalConditional);
                           bench.print("," + val / totalConditional);
                         } else if (val == 0) {
                           bench.print("," + val);
                         } else {
                           // val not 0 but toalconds are 0...not good
-                          System.out.println("Val not 0 but totalConditionals are zero!!!");
+                          logger.info("Val not 0 but totalConditionals are zero!!!");
                           System.exit(1);
                         }
 
-                      } else if (nexttempit.equals("D-W-Complexity")) {
+                      } else if ("D-W-Complexity".equals(nexttempit)) {
                         if (astCount != 0) {
                           // average by dividing D-W-Complexity by node count
                           bench.print("," + val / astCount);
@@ -694,11 +676,11 @@ public class ProcessData {
                           bench.print("," + val);
                         } else {
                           // val not 0 but astcount is 0...not good
-                          System.out.println("Val not 0 but astcount is zero!!!");
+                          logger.info("Val not 0 but astcount is zero!!!");
                           System.exit(1);
                         }
 
-                      } else if (nexttempit.equals("Expr-Complexity")) {
+                      } else if ("Expr-Complexity".equals(nexttempit)) {
 
                         if (exprCount != 0) {
                           // average by dividing expr-complexity for exprCount
@@ -707,11 +689,11 @@ public class ProcessData {
                           bench.print("," + val);
                         } else {
                           // val not 0 but expr-count are 0...not good
-                          System.out.println("Val not 0 but exprcount is zero!!!");
+                          logger.info("Val not 0 but exprcount is zero!!!");
                           System.exit(1);
                         }
 
-                      } else if (nexttempit.equals("Name-Complexity")) {
+                      } else if ("Name-Complexity".equals(nexttempit)) {
 
                         if (nameCount != 0) {
                           // average by dividing name-complexity for nameCount
@@ -720,7 +702,7 @@ public class ProcessData {
                           bench.print("," + val);
                         } else {
                           // val not 0 but name-count are 0...not good
-                          System.out.println("Val not 0 but name-count is zero!!!");
+                          logger.info("Val not 0 but name-count is zero!!!");
                           System.exit(1);
                         }
                       } else {
@@ -729,7 +711,7 @@ public class ProcessData {
                       }
                       break;
                     default:
-                      System.out.println("unhandled count value");
+                      logger.info("unhandled count value");
                       System.exit(1);
                   }
 
@@ -741,7 +723,7 @@ public class ProcessData {
               }
               if (CSV) {
                 if (tempIt.hasNext()) {
-                  System.out.println("Only allowed one metric for CSV");
+                  logger.info("Only allowed one metric for CSV");
                   System.exit(1);
                 }
               } else {
@@ -754,8 +736,8 @@ public class ProcessData {
             }
 
           } catch (SAXParseException err) {
-            System.out.println("** Parsing error" + ", line " + err.getLineNumber() + ", uri " + err.getSystemId());
-            System.out.println(" " + err.getMessage());
+            logger.info(new StringBuilder().append("** Parsing error").append(", line ").append(err.getLineNumber()).append(", uri ").append(err.getSystemId()).toString(), err);
+            logger.info(" " + err.getMessage(), err);
           } catch (SAXException e) {
             Exception x = e.getException();
             ((x == null) ? e : x).printStackTrace();
@@ -776,28 +758,25 @@ public class ProcessData {
 
     } else {
 
-      Iterator<String> it = xmlFileList.iterator();
-      while (it.hasNext()) {
-        String fileName = it.next();
-
+      for (String fileName : xmlFileList) {
         try {
           DocumentBuilderFactory docBuilderFactory = DocumentBuilderFactory.newInstance();
 
           DocumentBuilder docBuilder = docBuilderFactory.newDocumentBuilder();
           Document doc = docBuilder.parse(new File(fileName));
-          System.out.println("Gethering metric info from from xml file: " + fileName);
+          logger.info("Gethering metric info from from xml file: " + fileName);
           // normalize text representation
           doc.getDocumentElement().normalize();
 
           if (aggregationMechanism == ProcessData.CLASS) {
             getClassMetrics(fileName, doc, columns);
           } else {
-            System.out.println("Unknown aggregation Mechanism");
+            logger.info("Unknown aggregation Mechanism");
             System.exit(1);
           }
         } catch (SAXParseException err) {
-          System.out.println("** Parsing error" + ", line " + err.getLineNumber() + ", uri " + err.getSystemId());
-          System.out.println(" " + err.getMessage());
+          logger.info(new StringBuilder().append("** Parsing error").append(", line ").append(err.getLineNumber()).append(", uri ").append(err.getSystemId()).toString(), err);
+          logger.info(" " + err.getMessage(), err);
         } catch (SAXException e) {
           Exception x = e.getException();
           ((x == null) ? e : x).printStackTrace();
@@ -814,7 +793,8 @@ public class ProcessData {
       streamOut = new FileOutputStream(fileName);
       writerOut = new PrintWriter(new OutputStreamWriter(streamOut));
     } catch (IOException e) {
-      throw new CompilationDeathException("Cannot output file " + fileName);
+      logger.error(e.getMessage(), e);
+	throw new CompilationDeathException("Cannot output file " + fileName);
     }
     return writerOut;
   }
@@ -824,7 +804,8 @@ public class ProcessData {
       writerOut.flush();
       streamOut.close();
     } catch (IOException e) {
-      throw new CompilationDeathException("Cannot output file " + fileName);
+      logger.error(e.getMessage(), e);
+	throw new CompilationDeathException("Cannot output file " + fileName);
     }
   }
 
@@ -838,7 +819,7 @@ public class ProcessData {
     NodeList classes = doc.getElementsByTagName("Class");
     int numClasses = classes.getLength();
 
-    System.out.println("NumClasses for this document are" + numClasses);
+    logger.info("NumClasses for this document are" + numClasses);
 
     NodeList metrics = doc.getElementsByTagName("Metric");
 
@@ -872,15 +853,16 @@ public class ProcessData {
           int temp = Integer.parseInt(valToPrint);
           if (tempObj instanceof Integer) {
             Integer valSoFar = (Integer) tempObj;
-            aggregated.put(tempName, new Integer(valSoFar.intValue() + temp));
+            aggregated.put(tempName, Integer.valueOf(valSoFar.intValue() + temp));
           } else if (tempObj instanceof Double) {
             Double valSoFar = (Double) tempObj;
-            aggregated.put(tempName, new Double(valSoFar.doubleValue() + temp));
+            aggregated.put(tempName, Double.valueOf(valSoFar.doubleValue() + temp));
           } else {
             throw new RuntimeException("\n\nobject type not found");
           }
         } catch (Exception e) {
-          // temp was not an int
+          logger.error(e.getMessage(), e);
+		// temp was not an int
           notInt = true;
         }
 
@@ -890,15 +872,16 @@ public class ProcessData {
             double temp = Double.parseDouble(valToPrint);
             if (tempObj instanceof Integer) {
               Integer valSoFar = (Integer) tempObj;
-              aggregated.put(tempName, new Double(valSoFar.intValue() + temp));
+              aggregated.put(tempName, Double.valueOf(valSoFar.intValue() + temp));
             } else if (tempObj instanceof Double) {
               Double valSoFar = (Double) tempObj;
-              aggregated.put(tempName, new Double(valSoFar.doubleValue() + temp));
+              aggregated.put(tempName, Double.valueOf(valSoFar.doubleValue() + temp));
             } else {
               throw new RuntimeException("\n\nobject type not found");
             }
           } catch (Exception e) {
-            throw new RuntimeException("\n\n not an integer not a double unhandled!!!!");
+            logger.error(e.getMessage(), e);
+			throw new RuntimeException("\n\n not an integer not a double unhandled!!!!");
           }
         }
       } // end of if metricNode is an element_Node
@@ -915,7 +898,7 @@ public class ProcessData {
 
     newClassName += ".tex";
 
-    System.out.println("Creating tex file" + newClassName + " from metrics info in file" + fileName);
+    logger.info(new StringBuilder().append("Creating tex file").append(newClassName).append(" from metrics info in file").append(fileName).toString());
 
     PrintWriter writerOut = openWriteFile(newClassName);
     printTexTableHeader(writerOut, "Classes", columns);
@@ -923,8 +906,8 @@ public class ProcessData {
     /*
      * In order to print all class info alphabetically we will create a map of className to data to be displayed
      */
-    ArrayList<String> classNames = new ArrayList<String>();
-    HashMap<String, String> classData = new HashMap<String, String>();
+    ArrayList<String> classNames = new ArrayList<>();
+    HashMap<String, String> classData = new HashMap<>();
 
     // each row is a class the name is obtained from the tag Class
     NodeList classes = doc.getElementsByTagName("Class");
@@ -957,7 +940,7 @@ public class ProcessData {
           classNames.add(className);
         }
 
-        System.out.print("\nclassName " + className);
+        logger.info("\nclassName " + className);
 
         String data = "   ";
 
@@ -994,7 +977,7 @@ public class ProcessData {
 
             NodeList textFNList1 = name1.getChildNodes();
             String valToPrint = ((Node) textFNList1.item(0)).getNodeValue().trim();
-            System.out.print(" " + valToPrint);
+            logger.info(" " + valToPrint);
             // writerOut.print("&"+valToPrint);
             data += "&" + valToPrint;
 
@@ -1021,13 +1004,11 @@ public class ProcessData {
 
     Collections.sort(classNames);
 
-    Iterator<String> tempIt = classNames.iterator();
-    while (tempIt.hasNext()) {
-      String className = tempIt.next();
+    classNames.forEach(className -> {
       String data = classData.get(className);
       writerOut.print(className);
       writerOut.println(data);
-    }
+    });
     printTexTableFooter(writerOut, fileName);
 
     closeWriteFile(writerOut, metricListFileName);
@@ -1037,7 +1018,7 @@ public class ProcessData {
     out.println("");
     out.println("\\hline");
     out.println("\\end{tabular}");
-    out.println("\\caption{ ..." + tableCaption + "..... }");
+    out.println(new StringBuilder().append("\\caption{ ...").append(tableCaption).append("..... }").toString());
     out.println("\\end{table}");
     // out.println("\\end{figure}");
   }
