@@ -89,13 +89,13 @@ public class CompareInstructionsTest extends AbstractASMBackendTest {
 			mv.visitInsn(ICONST_2);
 			mv.visitFieldInsn(PUTFIELD, "soot/asm/backend/targets/CompareInstructions", "i", "I");
 			mv.visitVarInsn(ALOAD, 0);
-			mv.visitLdcInsn(new Float("221349.02"));
+			mv.visitLdcInsn(Float.valueOf("221349.02"));
 			mv.visitFieldInsn(PUTFIELD, "soot/asm/backend/targets/CompareInstructions", "f", "F");
 			mv.visitVarInsn(ALOAD, 0);
-			mv.visitLdcInsn(new Double("2123996.1231231233"));
+			mv.visitLdcInsn(Double.valueOf("2123996.1231231233"));
 			mv.visitFieldInsn(PUTFIELD, "soot/asm/backend/targets/CompareInstructions", "d", "D");
 			mv.visitVarInsn(ALOAD, 0);
-			mv.visitLdcInsn(new Long(2L));
+			mv.visitLdcInsn(Long.valueOf(2L));
 			mv.visitFieldInsn(PUTFIELD, "soot/asm/backend/targets/CompareInstructions", "l", "J");
 			mv.visitVarInsn(ALOAD, 0);
 			mv.visitInsn(ICONST_2);
@@ -204,7 +204,7 @@ public class CompareInstructionsTest extends AbstractASMBackendTest {
 			Label l0 = new Label();
 			mv.visitJumpInsn(IFNE, l0);
 			mv.visitVarInsn(ALOAD, 0);
-			mv.visitLdcInsn(new Double("2.0"));
+			mv.visitLdcInsn(Double.valueOf("2.0"));
 			mv.visitFieldInsn(PUTFIELD, "soot/asm/backend/targets/CompareInstructions", "d", "D");
 			mv.visitLabel(l0);
 			// mv.visitFrame(Opcodes.F_SAME, 0, null, 0, null);
@@ -289,7 +289,7 @@ public class CompareInstructionsTest extends AbstractASMBackendTest {
 			Label l0 = new Label();
 			mv.visitJumpInsn(IFNE, l0);
 			mv.visitVarInsn(ALOAD, 0);
-			mv.visitLdcInsn(new Long(2L));
+			mv.visitLdcInsn(Long.valueOf(2L));
 			mv.visitFieldInsn(PUTFIELD, "soot/asm/backend/targets/CompareInstructions", "l", "J");
 			mv.visitLabel(l0);
 			// mv.visitFrame(Opcodes.F_SAME, 0, null, 0, null);
